/* Derived terms */ top2 <blow#3909492>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -220,7 +220,7 @@ See: [[cocaine]]
 {{trans-bottom}}
 
 ===Derived terms===
-{{rel-top|terms derived from "blow"}}
+{{top2}}
 * [[blow away]]
 * [[blow job]]
 * [[blow off]]
@@ -232,7 +232,7 @@ See: [[cocaine]]
 * [[blowout]]
 * [[blow one's horn]]
 * [[blow one's top]]
-{{rel-mid}}
+{{mid2}}
 * [[blow someone's brains out]]
 * [[blow hot and cold]]
 * [[blowhard]]
@@ -244,7 +244,7 @@ See: [[cocaine]]
 * [[blow the whistle]]
 * [[mind-blowing]]
 * [[there she blows]]
-{{rel-bottom}}
+{{bottom}}
 
 ===Anagrams===
 *[[bowl]]
