/* Translations */ lao req <again#3916441>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -52,12 +52,13 @@
 * [[Ido]]: [[ankore un foyo]], [[ankorfoye]]
 * Indonesian: [[lagi]]
 * Italian: [[di nuovo]], [[ancora]]
-{{trans-mid}}
 * Japanese: [[また]] (mata); [[再び]] (ふたたび, futatabi); [[もう一度]] (mō ichido); [[あらためて]] (aratamete)
 * {{trreq|Kannada}}
+{{trans-mid}}
 * [[Khmer]]: {{Khmr|[[ទៀត]]}} (dtīət), {{Khmr|[[ម្ដងទៀត]]}} (mdorng dtīət)
 * Korean: [[다시]] (dasi)
 * Kurdish: {{KUchar|[[دیسان]]}}, {{KUchar|[[هه‌مدیس]]}}, {{KUchar|[[دوباره‌]]}}
+* {{trreq|Lao}}
 * Latin: [[denuo]]
 * Latvian: [[pret]]
 * Lithuanian: [[vėl]]
