iwiki +ta <consonance#3920053>

--- a/en/c/consonance.746531.wikitext
+++ b/en/c/consonance.746531.wikitext
@@ -14,6 +14,7 @@
 [[fr:consonance]]
 [[io:consonance]]
 [[ru:consonance]]
+[[ta:consonance]]
 [[te:consonance]]
 [[vi:consonance]]
 [[tr:consonance]]
