iwiki +ta <consumption#3920572>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -61,6 +61,7 @@
 [[pl:consumption]]
 [[ru:consumption]]
 [[fi:consumption]]
+[[ta:consumption]]
 [[te:consumption]]
 [[vi:consumption]]
 [[zh:consumption]]
