/* English */ sorting L3 sections in alphabetical order <bent#3924771>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -8,20 +8,6 @@
 * {{audio|en-us-bent.ogg|Audio (US)}}
 *: Rhymes: [[Rhymes:English:-ɛnt|-ɛnt]]
 
-===Noun===
-'''bent'''
-
-# An [[inclination]] or [[talent]].
-#: ''He had a natural bent for painting.''
-# A [[predisposition]] to act or react in a particular way.
-#: ''His mind was of a technical bent.''
-
-====Translations====
-* Dutch: [[aanleg]] {{m}}
-* Old English: [[geap|ġēap]] (1)
-* Swedish: [[böjelse]]
-* Romanian: [[îndoit]] [[înclinat]]
-
 ===Adjective===
 {{en-adj}}
 
@@ -55,8 +41,22 @@
 {{trans-mid}}
 {{trans-bottom}}
 
+===Noun===
+''bent''
+
+# An [[inclination]] or [[talent]].
+#: ''He had a natural bent for painting.''
+# A [[predisposition]] to act or react in a particular way.
+#: ''His mind was of a technical bent.''
+
+====Translations====
+* Dutch: [[aanleg]] {{m}}
+* Old English: [[geap|ġēap]] (1)
+* Swedish: [[böjelse]]
+* Romanian: [[îndoit]] [[înclinat]]
+
 ===Verb===
-'''bent'''
+''bent''
 
 # {{past of|bend}}
 
