--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -10,7 +10,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 ===Noun===
 {{en-noun}}
 
-# a part of a whole, especially a comparatively small part.
+# a part of a whole, especially a comparatively small part. yah!!!
 # {{arithmetic}} a [[ratio]] of two [[integer]]s, the [[numerator]] and the [[denominator]], usually written one above the other and separated by a [[vinculum]] (horizontal bar) <!--[[rational number]] (a rational number can always be expressed as a fraction, but that does not make it same thing)-->
 # {{chemistry}} a [[component]] of a [[mixture]], separated by [[fractionation]].
 # In a [[Eucharistic]] [[service]], the breaking of the [[Host]].
