--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -64,11 +64,21 @@ From the prefix [[mega-]].
 ==Icelandic==
 
 ===Verb===
-'''mega'''
-
-# to be [[allowed]] to; [[may]]
+'''mega''' (+ {{acc}}) ([[má]], [[mátti]], [[máttu]], [[mátt]])
+# to be [[allowed]], to be [[permitted]], to [[may]]
+#: ''Þú '''mátt''' þetta ekki.''
+#:: You''''re''' not '''allowed''' to do that.
+#: ''Hvað '''má''' bjóða ykkur að borða?''
+#:: What '''may''' offer you to eat?
+# to [[must]], to [[have to]] 
+# to  have the [[strengh]], to be [[able]]
 
 ====Derived terms====
+*[[mega betur]] (to [[have the upperhand]])
+*[[mega vera að]] (to have the time to do)
+*[[mega sín mikils]] (have a lot of [[influence]], to be [[powerful]])
+*[[mega sín ekki við]] (to not [[manage]] something)
+*[[mega til]] (to must, to have to)
 *[[mega lengi lifa]]
 *[[má vera]]
 *[[mega sín mikils]]
