--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -12,6 +12,7 @@
 ====Translations====
 {{trans-top|A strait that passes through Istanbul}}
 * Arabic: {{Arab|[[مضيق بوسفور]]}} {{IPAchar|(maɖīq búsfor)}} {{m}}
+* {{trreq|Armenian}}
 * [[Asturian]]: [[Bósforo]] {{m}}
 * Azerbaijani: [[Bosfor Boğazı]]
 * Bosnian: [[Bosfor]] {{m}}
@@ -31,8 +32,8 @@
 * Hindi: {{t-|hi|बोस्पोरुस जलसन्धि|sc=Deva|xs=Hindi}}
 * Hungarian: {{t-|hu|Boszporusz}}
 * Icelandic: {{t-|is|Bosporussund}}
-* Indonesian: [[Selat Bosporus]]
 {{trans-mid}}
+* Indonesian: [[Selat Bosporus]]
 * Italian: {{t-|it|Bosforo|m}}
 * Japanese: [[ボスポラス海峡]] (ボスポラスかいきょう, bosuporasu kaikyō)
 * Korean: [[보스포루스 해협]] (boseuporuseu haehyeop)
