--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -50,7 +50,7 @@ From Northern [[French]].
 * Cherokee: [[ᏥᏍᏚ]] (tsisdu)
 * Chinese: [[兔子]] (tùzi), [[白兔]] (bótù)
 * Croatian: {{t-|hr|kunić|m}}
-* Czech: {{t-|cs|králík}}
+* Czech: {{t-|cs|králík|m}}
 * Danish: {{t+|da|kanin|c}}
 * Dutch: {{t+|nl|konijn|n}}
 * Esperanto: {{t-|eo|kuniklo|xs=Esperanto}}
