--- a/en/t/tattling.775517.wikitext
+++ b/en/t/tattling.775517.wikitext
@@ -3,7 +3,7 @@
 ===Verb===
 '''tattling'''
 
-# {{present participle of|tattle}}
+# {{present participle of|[[tattle]]}}
 
 [[te:tattling]]
 [[vi:tattling]]
