--- a/en/e/executive order.776982.wikitext
+++ b/en/e/executive order.776982.wikitext
@@ -14,3 +14,5 @@
 *"[http://encarta.msn.com/dictionary_/executive_order.html executive order]" in ''Encarta® World English Dictionary'' [North American Edition] © & (P)2007 Microsoft Corporation.
 *"[http://www.m-w.com/cgi-bin/dictionary?book=Dictionary&va=executive+order executive order]" in ''Merriam-Webster's Online Dictionary'', © 2006-2007 Merriam-Webster, Incorporated.
 *"[http://dictionary.law.com/definition2.asp?selected=686&bold=|||| executive order]" at ''Law.com Dictionary'', © 2007 ALM Properties, Inc.
+
+[[ta:executive order]]
