--- a/en/b/biatch.741988.wikitext
+++ b/en/b/biatch.741988.wikitext
@@ -5,7 +5,7 @@
 ===Noun===
 {{en-noun|es}}
 
-# {{pejorative|slang|[[gangsta]]}} {{alternative spelling of|[[bitch]]}}
+# {{pejorative|slang|[[gangsta]]}} alternative pronunciation of [[bitch]]
 #* '''2002''', Natika Waldon, ''Urban Affairs'', page 197:
 #*: “Fuck you, you son of a bitch!” Dana screamed, trying to cover herself. “Fuck your mamma, '''biatch'''!” he said as he kicked his door shut.
 #* '''2004''', Greg Fox, ''Coming Clean: The Best and Worst of Dailyconfession.Com'', page 76:
