--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -80,6 +80,7 @@ From {{OF.}} ''[[fuiret]]'' (modern ''[[furet]]'') < {{LL.}} ''[[furo]]'' ‘thi
 [[fr:ferret]]
 [[io:ferret]]
 [[hu:ferret]]
+[[ro:ferret]]
 [[ru:ferret]]
 [[fi:ferret]]
 [[vi:ferret]]
