--- a/en/i/individualize.742107.wikitext
+++ b/en/i/individualize.742107.wikitext
@@ -3,8 +3,8 @@
 ===Verb===
 {{en-verb|individualiz|ing}}
 
-# To give something its own [[individuality]]; to [[characterize]] or [[differentiate]]
-# To [[modify]] something to suit an individual; to [[personalize]]
+# To give something its own [[individuality]]; to [[characterize]] or [[differentiate]].
+# To [[modify]] something to suit an individual; to [[personalize]].
 
 [[io:individualize]]
 [[vi:individualize]]
