Batch loading of articles from a text file - appended <handicaps#3970437>

--- a/en/h/handicaps.746826.wikitext
+++ b/en/h/handicaps.746826.wikitext
@@ -10,3 +10,14 @@
 
 [[fr:handicaps]]
 [[io:handicaps]]
+
+----
+==French==
+
+===Noun===
+{{infl|fr|plural}} {{m|p}}
+
+# {{plural of|handicap|lang=French}}
+
+
+{{rfc-auto}}
