--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -85,6 +85,7 @@ From the prefix [[mega-]].
 *[[mega ekki]]
 *[[mega vera að]]
 *[[mega ekki hugsa til]]
+*[[eins og nærri má geta]]
 
 [[Category:Icelandic verbs]]
 [[Category:Most used Icelandic verbs]]
