--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -98,7 +98,7 @@ A shortened form of [[copain]].
 ===Noun===
 {{fr-noun|m}}
 
-# {{colloquial}} A [[friend]], a [[pal]].
+# {{informal|lang=fr}} A [[friend]], a [[pal]].
 
 ----
 
