+trans fi <epicist#3975807>

--- a/en/e/epicist.774547.wikitext
+++ b/en/e/epicist.774547.wikitext
@@ -3,11 +3,12 @@
 ===Noun===
 {{en-noun}}
 
-# One who writes epics.
+# One who writes [[epic]]s.
 
 ====Translations====
 {{trans-top|epics writer}}
 * Croatian: {{t-|hr|epičar|m}}, {{t-|hr|epik|m}}
+* Finnish: {{t-|fi|eepikko}}
 * German: {{t-|de|Epiker|m}}
 {{trans-mid}}
 {{trans-bottom}}
