--- a/en/s/Swiss chard.856482.wikitext
+++ b/en/s/Swiss chard.856482.wikitext
@@ -1,9 +1,19 @@
 ==English==
+
 ===Noun===
-'''[[Swiss]] [[chard]]''' {{uncountable}}
+{{en-noun|-}}
+
 # (''Beta vulgaris'' var. ''cicla'') an edible leafy vegetable.
 
 ===Synonyms===
 :[[chard]]
 :[[mangold]]
 :[[silverbeet]]
+
+====Translations====
+{{trans-top|an edible leafy vegetable}}
+* Hungarian: {{t|hu|mángold}}
+{{trans-mid}}
+{{trans-bottom}}
+
+[[Category:Vegetables]]
