--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -33,16 +33,52 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 
 ====Derived terms====
 {{rel-top4|Terms which feature the ''-um'' suffix}}
+* [[agendum]]
+* [[antebellum]] (''before war'')
+* [[aquarium]]
+* [[binomium]]
 * [[castellum]]
 * [[conservatorium]]
+* [[continuum]]
 * [[criterium]]
+* [[datum]]
+* [[decennium]]
+* [[delirium]]
+* [[desideratum]]
+* [[erratum]] (''cf. German [[Irrtum]])
 * [[fatum]]
+* [[forum]]
+* [[gymnasium]]
+* [[honorarium]]
+* [[imperium]]
+* [[interbellum]] (''between war(s)'')
 {{rel-mid4}}
+* [[labarum]]
+* [[mandatum]]
+* [[maximum]]
+* [[medium]]
+* [[minimum]]
+* [[millenium]]
+* [[modicum]]
 * [[mortuarium]]
+* [[museum]]
+* [[opium]]
+* [[optimum]]
 {{rel-mid4}}
 * [[Persarum]]
 * [[pessarium]]
+* [[podium]]
+* [[postbellum]] (''after war'')
+* [[referendum]]
+* [[sanatorium]]
+* [[solarium]]
+* [[stadium]]
+* [[talcum]] (''any shiny mineral'')
+* [[tedium]]
 {{rel-mid4}}
+* [[ultimatum]]
+* [[unicum]]
+* [[vacuum]]
 * [[valium]]
 {{rel-bottom|note=: This list is very much incomplete; please help its completion by adding terms.}}
 
