--- a/en/v/villose.802908.wikitext
+++ b/en/v/villose.802908.wikitext
@@ -1,11 +1,11 @@
 ==English==
 
-==Adjective==
-
+===Adjective===
 {{en-adj}}
 
 # {{mycology}} covered with long, soft hairs.
 
+----
 
 ==Italian==
 
