--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -8,13 +8,13 @@ Via Middle English and Old French from Latin ''[[domina]]''
 *Rhymes: [[Rhymes:English:-eɪm|-eɪm]]
 
 ===Noun===
-'''dame'''  (''plural:'' '''[[dames]]''')
+{{en-noun}}
 
-# {{archaic}} lady, woman
 # {{UK}} the equivalent title to [[Sir]] for a female knight
-#:  Dame Edith Sitwell
-# {{colloquial}} slightly derogatory way of referring to a woman
-#: "There ain't nothin' like a dame!" (''South Pacific'')
+#:  '''''Dame''' Edith Sitwell''
+# {{informal|South Pacific}}[[category:Regional English]] Slightly [[derogatory]] way of referring to a woman.
+#: ''There ain't nothin' like a '''dame'''!''
+# {{archaic}} Lady, woman.
 
 ====Synonyms====
 * see [[wikiSaurus:woman]]
