/* English */ trans to L4 <Niphon#3990106>

--- a/en/n/Niphon.775906.wikitext
+++ b/en/n/Niphon.775906.wikitext
@@ -12,8 +12,7 @@ From Japanese [[日本]] (formerly ''Niffon'', now ''Nippon'' or ''Nihon'') "Jap
 #*'''1853:''' "Japan", ''Putnam's Monthly'', vol. 1, no. 3, p. 242
 #*:'''Niphon''', the chief island, is nine hundred miles long, and one hundred miles in average width.
 
-===Translations===
-{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
+====Translations====
 {{top}}
 *Latin: [[Niphonia]] {{f}}
 {{mid}}
