/* English */ syn to L4 <Swiss chard#3994723>

--- a/en/s/Swiss chard.856482.wikitext
+++ b/en/s/Swiss chard.856482.wikitext
@@ -5,13 +5,12 @@
 
 # (''Beta vulgaris'' var. ''cicla'') an edible leafy vegetable.
 
-===Synonyms===
-: [[chard]]
-: [[mangold]]
-: [[silverbeet]]
+====Synonyms====
+*[[chard]]
+*[[mangold]]
+*[[silverbeet]]
 
 ====Translations====
-{{rfc-level|Translations at L4+ not in L3 POS section (AutoFormat would have corrected level of Synonyms)}}
 {{trans-top|an edible leafy vegetable}}
 * Hungarian: {{t|hu|mángold}}
 {{trans-mid}}
