--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -44,6 +44,7 @@ From {{L.|es}} '''[[mundus]]''' "[[world]]"
 [[es:mundo]]
 [[fr:mundo]]
 [[gl:mundo]]
+[[ko:mundo]]
 [[io:mundo]]
 [[id:mundo]]
 [[is:mundo]]
