--- a/en/b/betted.6796.wikitext
+++ b/en/b/betted.6796.wikitext
@@ -9,8 +9,7 @@
 * [[w:SAMPA|SAMPA]]: /'/
 * {{IPA|/'bεtət/}}
 
-===Translations===
-{{rfc-level|Translations at L3+}}
+====Translations====
 * Dutch: [[gokte]]
 
 ===Verb===
@@ -22,5 +21,5 @@
 * [[w:SAMPA|SAMPA]]: /'/
 * {{IPA|/'bεtət/}}
 
-===Translations===
+====Translations====
 * Dutch: [[gegokt]]
