--- a/en/o/Olympus Mons.854983.wikitext
+++ b/en/o/Olympus Mons.854983.wikitext
@@ -1,7 +1,9 @@
-==English==
+==Translingual==
+
+===Etymology===
+Named in 1973 after the [[albedo feature]] {{term|Nix Olympica||Snows of Olympus}}.
 
 ===Proper noun===
-{{wikipedia}}
-{{en-proper-noun|sg=[[Olympus]] [[Mons]]}}
+'''[[Olympus]] [[Mons]]'''
 
-# An [[extinct]] [[volcano]] and [[prominent]] [[feature]] on the [[planet]] [[Mars]], notable as the highest [[mountain]] in the [[solar system]] (elevation: 27 [[kilometers]]).
+# {{surface feature}} An [[extinct]] [[volcano]] and [[prominent]] [[feature]] on the [[planet]] [[Mars]], notable as the highest [[mountain]] in the [[solar system]] (elevation: 27 [[kilometers]]).
