--- a/en/o/Olympus Mons.854983.wikitext
+++ b/en/o/Olympus Mons.854983.wikitext
@@ -4,6 +4,7 @@
 Named in 1973 after the [[albedo feature]] {{term|Nix Olympica||Snows of Olympus}}.
 
 ===Proper noun===
+{{wikipedia}}
 '''[[Olympus]] [[Mons]]'''
 
 # {{surface feature}} An [[extinct]] [[volcano]] and [[prominent]] [[feature]] on the [[planet]] [[Mars]], notable as the highest [[mountain]] in the [[solar system]] (elevation: 27 [[kilometers]]).
