script template -ARchar +Arab <seize#4023927>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -1,14 +1,14 @@
 ==English==
 
 ===Pronunciation===
-*[[w:AHD|AHD]]: sēz
-*{{IPA|/siːz/}}
-*[[w:SAMPA|SAMPA]]: /si:z/
-*{{audio|en-us-seize.ogg|Audio (US)}}
+* [[w:AHD|AHD]]: sēz
+* {{IPA|/siːz/}}
+* [[w:SAMPA|SAMPA]]: /si:z/
+* {{audio|en-us-seize.ogg|Audio (US)}}
 
 ====Homophones====
-*[[seas]]
-*[[sees]]
+* [[seas]]
+* [[sees]]
 
 ===Verb===
 {{en-verb|seiz|ing}}
@@ -17,45 +17,45 @@
 # To take advantage of an [[opportunity]].
 # To have a [[seizure]].
 # To [[bind]] or [[lock]] in position [[immovably]].
-#:''Rust caused the engine to '''seize''', never to run again.''
+#: ''Rust caused the engine to '''seize''', never to run again.''
 
 ====Related terms====
-*[[be seized with]]
-*[[seizure]]
-*[[seize the day]]
+* [[be seized with]]
+* [[seizure]]
+* [[seize the day]]
 
 ====Translations====
 {{trans-top|grab}}
-*Arabic: {{ARchar|[[استولى على]]}} {{IPAchar|(’istáula ʕála)}}
-*Chinese Characters: [[揢]]
-*Chinese: [[捕抓]] (bǔzhuā)
-*Danish: [[gribe]]
-*Dutch: [[grijpen]], [[vangen]], [[pakken]]
-*Finnish: [[tarttua]]
-*French: [[saisir]]
-*German: [[ergreifen]]
-*Hungarian: [[megfog]], [[megragad]]
-*Italian: [[prendere]]
+* Arabic: {{Arab|[[استولى على]]}} {{IPAchar|(’istáula ʕála)}}
+* Chinese Characters: [[揢]]
+* Chinese: [[捕抓]] (bǔzhuā)
+* Danish: [[gribe]]
+* Dutch: [[grijpen]], [[vangen]], [[pakken]]
+* Finnish: [[tarttua]]
+* French: [[saisir]]
+* German: [[ergreifen]]
+* Hungarian: [[megfog]], [[megragad]]
+* Italian: [[prendere]]
 {{trans-mid}}
-*Japanese: [[捉える]] (とらえる, toraeru)
-*Korean: [[붙잡다]] (butjapda)
-*Latin: [[capere]]
-*Norwegian: [[gripe]]
-*Old English: [[niman]]
-*Portuguese: [[agarrar]], [[capturar]]
-*Russian: [[захватывать]] (zaχvátyvat’)
-*Spanish: [[agarrar]]
-*Swedish: [[gripa]], [[fånga]]
+* Japanese: [[捉える]] (とらえる, toraeru)
+* Korean: [[붙잡다]] (butjapda)
+* Latin: [[capere]]
+* Norwegian: [[gripe]]
+* Old English: [[niman]]
+* Portuguese: [[agarrar]], [[capturar]]
+* Russian: [[захватывать]] (zaχvátyvat’)
+* Spanish: [[agarrar]]
+* Swedish: [[gripa]], [[fånga]]
 {{trans-bottom}}
 
 {{trans-top|take advantage}}
-*Danish: [[gribe]]
-*Dutch: [[grijpen]], [[aangrijpen]]
-*Finnish: [[tarttua]] [[tilaisuus|tilaisuuteen]]
+* Danish: [[gribe]]
+* Dutch: [[grijpen]], [[aangrijpen]]
+* Finnish: [[tarttua]] [[tilaisuus|tilaisuuteen]]
 {{trans-mid}}
-*French: [[saisir]]
-*Norwegian: [[gripe]]
-*Portuguese: [[aproveitar]]
+* French: [[saisir]]
+* Norwegian: [[gripe]]
+* Portuguese: [[aproveitar]]
 {{trans-bottom}}
 
 ----
@@ -68,7 +68,8 @@
 # [[sixteen]]
 
 ====Derived terms====
-*[[seizième]]
+* [[seizième]]
+
 [[Category:fr:Cardinal numbers]]
 
 [[bg:seize]]
