script template -FAchar +fa-Arab, subst {{vi}} in trans <bent#4026899>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -56,7 +56,7 @@
 * Swedish: [[böjelse]]
 {{mid}}
 * Romanian: [[îndoit]] [[înclinat]]
-* {{vi}}: [[thiên hướng]], [[khuynh hướng]]
+* Vietnamese: [[thiên hướng]], [[khuynh hướng]]
 {{bottom}}
 
 ===Verb===
@@ -93,7 +93,7 @@
 ==Turkish==
 
 ===Etymology===
-From Persian {{FAchar|[[بند]]}} (''band'').
+From Persian {{fa-Arab|[[بند]]}} (''band'').
 
 ===Noun===
 '''bent'''
