iwiki +kk <theory#4028582>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -201,6 +201,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 [[io:theory]]
 [[id:theory]]
 [[it:theory]]
+[[kk:theory]]
 [[hu:theory]]
 [[ja:theory]]
 [[pl:theory]]
