--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -17,6 +17,7 @@ Old English ''[[leþer]]''
 # (''plural'': '''leathers''') Leather clothing, often worn by [[motorcycle]] riders.
 # {{baseball}} A good defensive play
 #: ''Jones showed good '''leather''' to snare that [[liner]].''
+# ''([[gay]])'' A mass noun describing homosexual men usually into one form or another of sadomasochistic sex, or at least, by the attire they choose to be seen in on Saturday night.
 
 ====Translations====
 {{trans-top|material produced by tanning animal skin}}
