--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -22,13 +22,13 @@
 {{mid}}
 * German: [[betrachten]], [[sehen]], [[schauen]]
 * Icelandic: [[sjá]]
+* Italian: {{t|it|guardare}}
 * [[Scottish Gaelic]]: [[amhairc]]
 * Spanish: [[mirar]], [[vigilar]]
 * Portuguese: [[olhar]]
 * Russian: [[смотреть]], [[глядеть]]
 * Serbian: [[posmatrati]], [[gledati]]
 * [[Macedonian]]: [[Гледа]], [[Следи]]
-* Italian: Guardare
 {{bottom}}
 
 ===References===
