--- a/en/c/consonance.746531.wikitext
+++ b/en/c/consonance.746531.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 {{en-noun}}
 
-#{{music}} [[destyn-e]]; [[agreement]]; lack of [[discordance]]
+#{{music}} [[harmony]]; [[agreement]]; lack of [[discordance]]
 
 ====Translations====
 {{trans-top|consonance}}
