--- a/en/m/multibillion.34082.wikitext
+++ b/en/m/multibillion.34082.wikitext
@@ -13,10 +13,9 @@ MOHL-tee-BIL-li-uhn
 # Having more than 2,000,000,000 in the billion range.
 # In the old numering system (''Notably British''), equivalent to more than 2,000,000,000,000 in the old billion range.
 
-===Translations===
-{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
-*French: [[multibillion]]
-*Italian: [[multibillione]]
-*Latin: multibillion
+====Translations====
+* French: [[multibillion]]
+* Italian: [[multibillione]]
+* Latin: multibillion
 
 [[fr:multibillion]]
