--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -3,10 +3,9 @@
 ===Pronunciation===
 * {{enPR|mĭl}}, {{IPA|/mɪl/}}, {{SAMPA|/mIl/}}
 * {{audio|en-us-mill.ogg|Audio (US)}}
+* {{rhymes|ɪl}}
 
-*: Rhymes: [[Rhymes:English:-ɪl|-ɪl]]
-
-====Homophones====
+====Homophone====
 * [[mil]]
 
 ===Etymology 1===
