/* Noun */ +Czech <rules of the road#4055717>

--- a/en/r/rules of the road.801538.wikitext
+++ b/en/r/rules of the road.801538.wikitext
@@ -4,3 +4,9 @@
 {{en-noun|-}}
 
 # The [[law]]s that govern [[driving]], especially of [[motorist]]s and [[cyclist]]s.
+
+====Translations====
+{{trans-top|rules and regulations}}
+* Czech: [[pravidla silničního provozu]] {{n|p}}
+{{trans-mid}}
+{{trans-bottom}}
