expand defintion, mark as idiomatic <knee-high to a grasshopper#4056254>

--- a/en/k/knee-high to a grasshopper.742286.wikitext
+++ b/en/k/knee-high to a grasshopper.742286.wikitext
@@ -1,11 +1,12 @@
 ==English==
 
 ===Adjective===
-'''[[knee]] [[high]] [[to]] [[a]] [[grasshopper]]'''
+{{en-adj|[[knee]] [[high]] [[to]] [[a]] [[grasshopper]]|-}}
 
-# [[short]] (not [[tall]])
+# {{idiomatic}} [[short]] (not [[tall]]); especially relating to when the subject was a small [[child]]
 
 ====Translations====
-*Russian: [[метр с кепкой]] /meter high when havihg cap on/, [[метр в прыжке]] /meter high when jumping/
-
-[[Category:English adjectives]]
+{{trans-top|short (not tall)}}
+{{trans-mid}}
+*Russian: [[метр с кепкой]] /meter high when having cap on/, [[метр в прыжке]] /meter high when jumping/
+{{trans-bottom}}
