/* Adjective */ fix sytax <knee-high to a grasshopper#4056256>

--- a/en/k/knee-high to a grasshopper.742286.wikitext
+++ b/en/k/knee-high to a grasshopper.742286.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Adjective===
-{{en-adj|[[knee]] [[high]] [[to]] [[a]] [[grasshopper]]|-}}
+{{en-adj|pos=[[knee]] [[high]] [[to]] [[a]] [[grasshopper]]|-}}
 
 # {{idiomatic}} [[short]] (not [[tall]]); especially relating to when the subject was a small [[child]]
 
