/* Translations */ add gender for ga <squirrel#4057724>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -47,7 +47,7 @@ From {{AF.}} ''[[esquirel]]'', from {{OF.}} ''[[escurel]]'' (modern {{F.}} {{ter
 *Hungarian: [[mókus]]
 *Icelandic: [[íkorni]] {{m}}
 *[[Interlingua]]: [[sciuro]], [[scuriolo]]
-*Irish: [[iora]], [[madra crainn]] {{g|Irish}}
+*Irish: [[iora]] {{m}}, [[madra crainn]] {{m}}
 *[[Isthmus Zapotec]]: [[chisa]]
 *Italian: [[scoiattolo]] {{m}}
 *Japanese: [[栗鼠]] (りす, risu)
