--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -2,9 +2,9 @@
 ==English==
 
 ===Pronunciation===
-*{{IPA|/pɪg/}}
-*{{audio|en-us-pig.ogg|Audio (US)}}
-*Rhymes: [[Rhymes:English:-ɪɡ|-ɪɡ]]
+* {{IPA|/pɪg/}}
+* {{audio|en-us-pig.ogg|Audio (US)}}
+* Rhymes: [[Rhymes:English:-ɪɡ|-ɪɡ]]
 
 ===Noun===
 [[Image:Sow with piglet.jpg|thumb|right|250px|Domestic pigs (''Sus scrofa'')]]
@@ -35,147 +35,147 @@
 
 ====Translations====
 {{trans-top|mammal of genus ''Sus''}}
-*[[Afrikaans]]: [[vark]]
-*Albanian: [[derr]] {{g|Albanian}}
-*[[Amuzgo]]: [[kítzku]]
-*Arabic: {{Arab|[[خنزير]]}} (xanzīr) {{m}}
-*Aramaic:
-*:Syriac: [[ܚܙܝܪܐ]] (khzīrā, khzīro) {{m}}, [[ܚܙܝܪܬܐ]] (khzīrtā, khzīrto) {{f}}
-*:Aramaic: [[חזירא]] (khzīrā, khzīro) {{m}}, [[חזירתא]] (khzīrtā, khzīrto) {{f}}
-*[[Basque]]: [[urde]], [[zerri]], [[txerri]]
-*Belarusian: [[свіння]] (svinnja) {{f}}
-*Bosnian: [[svinja]] {{f}}
-*[[Breton]]: [[pemoc’h]] {{m}} [[moc'h]] {{p}}
-*Bulgarian: [[свиня]] (svinja) {{f}}
-*[[Catalan]]: [[porc]] {{m}}, [[truja]] {{f}}
-*[[Cebuano]]: [[baboy]]
-*[[Chamorro]]: [[babui]]
-*Cherokee: [[ᏏᏆ]] (siqua)
-*CJK Characters: [[豬]], [[猪]]; [[豚]]
-*Chinese: [[豬]], [[猪]] (zhū)
-*Croatian: [[svinja]] {{f}}
-*Czech: [[prase]] {{n}}
-*Danish: [[svin]] {{n}}
-*Dutch: [[zwijn]] {{n}}, [[varken]] {{n}}
-*[[Erzya]]: [[туво]] (tuvo)
-*Esperanto: [[porko]]
-*Estonian: [[siga#Estonian|siga]]
-*Faroese: [[svín]] {{n}}
-*Finnish: [[sika#Finnish|sika]]
-*French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
-*[[Frisian]]: [[baarch]] {{g|Frisian}}
-*[[Friulian]]: [[purcit]] {{m}}
-*[[Galician]]: [[porco#Gallegan|porco]] {{m}}
-*German: [[Schwein]] {{n}}
-*Greek: [[γουρούνι]] (gurúni) {{n}}, [[χοίρος]] (khíros) {{m}}
-*Hebrew: [[חזיר]] (hazír) {{m}}
-*Hungarian: [[sertés]], [[disznó]], [[malac]]
-*Icelandic: [[svín]] {{g|Icelandic}}
-*[[Ido]]: [[porko]]
-*[[Ilocano]]: [[baboy]]
-*[[Interlingua]]: [[porco#Interlingua|porco]]
-*Irish: [[muc]] {{f}}
-*Italian: [[maiale]] {{m}}, [[porco#Italian|porco]] {{m}}
-*Japanese: [[豚]] ([[ぶた]], buta)
-*[[Karelian]]: [[počči]]
-*Korean: [[돼지]] (dwaeji)
-*Kurdish: {{KUchar|[[به‌راز]]}} {{g|Kurdish}}
-*[[Ladin]]: [[porcel]]
-*Latin: [[sus]] {{c}}, [[porcus]] {{m}}<!--do not put the scientific name here-->
+* [[Afrikaans]]: [[vark]]
+* Albanian: [[derr]] {{g|Albanian}}
+* [[Amuzgo]]: [[kítzku]]
+* Arabic: {{Arab|[[خنزير]]}} (xanzīr) {{m}}
+* Aramaic:
+*: Syriac: [[ܚܙܝܪܐ]] (khzīrā, khzīro) {{m}}, [[ܚܙܝܪܬܐ]] (khzīrtā, khzīrto) {{f}}
+*: Aramaic: [[חזירא]] (khzīrā, khzīro) {{m}}, [[חזירתא]] (khzīrtā, khzīrto) {{f}}
+* [[Basque]]: [[urde]], [[zerri]], [[txerri]]
+* Belarusian: [[свіння]] (svinnja) {{f}}
+* Bosnian: [[svinja]] {{f}}
+* [[Breton]]: [[pemoc’h]] {{m}} [[moc'h]] {{p}}
+* Bulgarian: [[свиня]] (svinja) {{f}}
+* [[Catalan]]: [[porc]] {{m}}, [[truja]] {{f}}
+* [[Cebuano]]: [[baboy]]
+* [[Chamorro]]: [[babui]]
+* Cherokee: [[ᏏᏆ]] (siqua)
+* CJK Characters: [[豬]], [[猪]]; [[豚]]
+* Chinese: [[豬]], [[猪]] (zhū)
+* Croatian: [[svinja]] {{f}}
+* Czech: [[prase]] {{n}}
+* Danish: [[svin]] {{n}}
+* Dutch: [[zwijn]] {{n}}, [[varken]] {{n}}
+* [[Erzya]]: [[туво]] (tuvo)
+* Esperanto: [[porko]]
+* Estonian: [[siga#Estonian|siga]]
+* Faroese: [[svín]] {{n}}
+* Finnish: [[sika#Finnish|sika]]
+* French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
+* [[Frisian]]: [[baarch]] {{g|Frisian}}
+* [[Friulian]]: [[purcit]] {{m}}
+* [[Galician]]: [[porco#Gallegan|porco]] {{m}}
+* German: [[Schwein]] {{n}}
+* Greek: [[γουρούνι]] (gurúni) {{n}}, [[χοίρος]] (khíros) {{m}}
+* Hebrew: [[חזיר]] (hazír) {{m}}
+* Hungarian: [[sertés]], [[disznó]], [[malac]]
+* Icelandic: [[svín]] {{g|Icelandic}}
+* [[Ido]]: [[porko]]
+* [[Ilocano]]: [[baboy]]
+* [[Interlingua]]: [[porco#Interlingua|porco]]
+* Irish: [[muc]] {{f}}
+* Italian: [[maiale]] {{m}}, [[porco#Italian|porco]] {{m}}
+* Japanese: [[豚]] ([[ぶた]], buta)
+* [[Karelian]]: [[počči]]
+* Korean: [[돼지]] (dwaeji)
+* Kurdish: {{KUchar|[[به‌راز]]}} {{g|Kurdish}}
+* [[Ladin]]: [[porcel]]
+* Latin: [[sus]] {{c}}, [[porcus]] {{m}}<!--do not put the scientific name here-->
 {{trans-mid}}
-*Latvian: [[cūka]] {{f}}
-*Lithuanian: [[kiaulė]] {{g|Lithuanian}}
-*[[Lower Sorbian]]: [[swinja]] {{f}}
-*[[Macedonian]]: [[свиња]] (svinja) {{f}}
-*Malay: [[babi]], [[khinzir]]
-*[[Malayalam]]: [[പന്നി]] (panni)
-*Maltese: [[ħanżir]] {{m}}
-*Maori: [[poaka]]
-*Norwegian: [[svin]] {{n}}, [[gris]] {{m}}
-*[[Occitan]]: [[pòrc]] {{m}}
-*Persian: {{FAchar|[[خوک]]}} (khuk)
-*Polish: [[świnia]] {{f}}
-*Portuguese: [[porco#Portuguese|porco]] {{m}}
-*[[Proto-Polynesian]]: *puaka
-*[[Romani]]: [[balo]] {{m}}, [[bali]] {{f}}
-*Romanian: [[porc#Romanian|porc]] {{m}}
-*[[Romansh]]: [[portg]]
-*Russian: [[свинья]] (svin’já) {{f}}
-*[[Sami]]: [[spiidni]]
-*Sardinian (northern): [[porcu]] {{m}}, [[mannale]] {{m}}, [[sue]] {{f}}
-*Sardinian (southern): [[procu]] {{m}}, [[mannali]] {{m}}, [[sue]] {{f}}
-*[[Scottish Gaelic]]: [[muc]] {{f}}
-*Serbian:
-*:Cyrillic: [[свиња#Serbian|свиња]] {{f}}
-*:Roman: [[svinja#Serbian|svinja]] {{f}}
-*Slovak: [[prasa]] {{n}} (1)
-*Slovene: [[svinja]] {{f}}, [[prašič]] {{m}}, [[pujs]] {{m}}
-*Spanish: [[cerdo]] {{m}}, [[chancho]] {{m}} {{italbrac|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, [[chon]] {{m}} {{italbrac|Northern Central Spain|specifically Cantabria}}, [[coche]] {{m}} {{italbrac|Guatemala}}, [[cochi]] {{m}} {{italbrac|Northwestern Mexico}}, [[cochín]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[cochino]] {{m}} {{italbrac|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, [[cocho]] {{m}} {{italbrac|Northern Spain|specifically Leon}}, [[cuchi]] {{m}} {{italbrac|Northern Central and Northwestern Argentina}}, [[cuto]] {{m}} {{italbrac|Northern Spain - specifically Aragon, La Rioja and Navarra}}, [[gocho]] {{m}} {{italbrac|Northern Spain|specifically Asturias and Leon}}, [[gorrino]] {{italbrac|Southern Central and Eastern Central Spain}}, [[guarro]] {{m}} {{italbrac|Western Spain|specifically Extremadura}}, [[marrano]] {{m}} {{italbrac|Central and Western Venezuela|Colombia}}, [[puerco]] {{m}} {{italbrac|Caribbean Islands|Costa Rica|Mexico|Panama}}, [[tocino]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[tunco]] {{m}} {{italbrac|El Salvador}}
-*Swahili: [[nguruwe]]
-*Swedish: [[gris]] {{c}}, [[svin]] {{n}}
-*[[Tagalog]]: [[baboy]]
-*[[Telugu]]: [[పంది]] (paMdi)
-*[[Tok Pisin]]: [[pik]]
-*Turkish: [[domuz]]
-*Ukrainian: [[свиня]] (svynja) {{f}}
-*[[Upper Sorbian]]: [[swinjo]] {{g|Upper Sorbian}}
-*Urdu: {{URchar|[[خوک]]}}, {{URchar|[[خنزیر]]}} {{g|Urdu}}
-*[[Veps]]: [[siga#Veps|siga]]
-*Welsh: [[mochyn]] {{g|Welsh}}
+* Latvian: [[cūka]] {{f}}
+* Lithuanian: [[kiaulė]] {{g|Lithuanian}}
+* [[Lower Sorbian]]: [[swinja]] {{f}}
+* [[Macedonian]]: [[свиња]] (svinja) {{f}}
+* Malay: [[babi]], [[khinzir]]
+* [[Malayalam]]: [[പന്നി]] (panni)
+* Maltese: [[ħanżir]] {{m}}
+* Maori: [[poaka]]
+* Norwegian: [[svin]] {{n}}, [[gris]] {{m}}
+* [[Occitan]]: [[pòrc]] {{m}}
+* Persian: {{fa-Arab|[[خوک]]}} (khuk)
+* Polish: [[świnia]] {{f}}
+* Portuguese: [[porco#Portuguese|porco]] {{m}}
+* [[Proto-Polynesian]]: *puaka
+* [[Romani]]: [[balo]] {{m}}, [[bali]] {{f}}
+* Romanian: [[porc#Romanian|porc]] {{m}}
+* [[Romansh]]: [[portg]]
+* Russian: [[свинья]] (svin’já) {{f}}
+* [[Sami]]: [[spiidni]]
+* Sardinian (northern): [[porcu]] {{m}}, [[mannale]] {{m}}, [[sue]] {{f}}
+* Sardinian (southern): [[procu]] {{m}}, [[mannali]] {{m}}, [[sue]] {{f}}
+* [[Scottish Gaelic]]: [[muc]] {{f}}
+* Serbian:
+*: Cyrillic: [[свиња#Serbian|свиња]] {{f}}
+*: Roman: [[svinja#Serbian|svinja]] {{f}}
+* Slovak: [[prasa]] {{n}} (1)
+* Slovene: [[svinja]] {{f}}, [[prašič]] {{m}}, [[pujs]] {{m}}
+* Spanish: [[cerdo]] {{m}}, [[chancho]] {{m}} {{italbrac|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, [[chon]] {{m}} {{italbrac|Northern Central Spain|specifically Cantabria}}, [[coche]] {{m}} {{italbrac|Guatemala}}, [[cochi]] {{m}} {{italbrac|Northwestern Mexico}}, [[cochín]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[cochino]] {{m}} {{italbrac|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, [[cocho]] {{m}} {{italbrac|Northern Spain|specifically Leon}}, [[cuchi]] {{m}} {{italbrac|Northern Central and Northwestern Argentina}}, [[cuto]] {{m}} {{italbrac|Northern Spain - specifically Aragon, La Rioja and Navarra}}, [[gocho]] {{m}} {{italbrac|Northern Spain|specifically Asturias and Leon}}, [[gorrino]] {{italbrac|Southern Central and Eastern Central Spain}}, [[guarro]] {{m}} {{italbrac|Western Spain|specifically Extremadura}}, [[marrano]] {{m}} {{italbrac|Central and Western Venezuela|Colombia}}, [[puerco]] {{m}} {{italbrac|Caribbean Islands|Costa Rica|Mexico|Panama}}, [[tocino]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[tunco]] {{m}} {{italbrac|El Salvador}}
+* Swahili: [[nguruwe]]
+* Swedish: [[gris]] {{c}}, [[svin]] {{n}}
+* [[Tagalog]]: [[baboy]]
+* [[Telugu]]: [[పంది]] (paMdi)
+* [[Tok Pisin]]: [[pik]]
+* Turkish: [[domuz]]
+* Ukrainian: [[свиня]] (svynja) {{f}}
+* [[Upper Sorbian]]: [[swinjo]] {{g|Upper Sorbian}}
+* Urdu: {{ur-Arab|[[خوک]]}}, {{ur-Arab|[[خنزیر]]}} {{g|Urdu}}
+* [[Veps]]: [[siga#Veps|siga]]
+* Welsh: [[mochyn]] {{g|Welsh}}
 {{trans-bottom}}
 
 {{trans-top|greedy person}}
-*[[Afrikaans]]: [[vark]]
-*Finnish: [[ahmatti]]
+* [[Afrikaans]]: [[vark]]
+* Finnish: [[ahmatti]]
 {{trans-mid}}
-*French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
-*Italian: [[porco]] {{m}}, [[maiale]] {{m}}
+* French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
+* Italian: [[porco]] {{m}}, [[maiale]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|nasty or disgusting person}}
-*[[Afrikaans]]: [[vark]]
-*Bosnian: [[svinja]] {{f}}
-*Finnish: [[ilkimys]]
-*French: [[salaud]] {{m}}, [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
-*German: [[Schwein]] {{n}}
-*Italian: [[bastardo]] {{m}}, bastarda {{f}}, [[stronzo]] {{m}}, stronza {{f}}
+* [[Afrikaans]]: [[vark]]
+* Bosnian: [[svinja]] {{f}}
+* Finnish: [[ilkimys]]
+* French: [[salaud]] {{m}}, [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
+* German: [[Schwein]] {{n}}
+* Italian: [[bastardo]] {{m}}, bastarda {{f}}, [[stronzo]] {{m}}, stronza {{f}}
 {{trans-mid}}
-*Latvian: [[cūka]] {{f}}
-*Russian: [[свинья]] (svin’já) {{f}}
-*Serbian:
-*:Cyrillic: [[свиња#Serbian|свиња]] {{f}}
-*:Roman: [[svinja#Serbian|svinja]] {{f}}
-*Slovene: [[svinja]] {{f}}, [[prasec]] {{m}}
+* Latvian: [[cūka]] {{f}}
+* Russian: [[свинья]] (svin’já) {{f}}
+* Serbian:
+*: Cyrillic: [[свиња#Serbian|свиња]] {{f}}
+*: Roman: [[svinja#Serbian|svinja]] {{f}}
+* Slovene: [[svinja]] {{f}}, [[prasec]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|dirty or slovenly person}}
-*[[Afrikaans]]: [[vark]]
-*Bosnian: [[svinja]] {{f}}
-*Finnish: [[sika#Finnish|sika]], [[possu]]
-*French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
-*German: [[Schwein]] {{n}}
-*Italian: [[porco]] {{m}}, [[maiale]] {{m}}
+* [[Afrikaans]]: [[vark]]
+* Bosnian: [[svinja]] {{f}}
+* Finnish: [[sika#Finnish|sika]], [[possu]]
+* French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
+* German: [[Schwein]] {{n}}
+* Italian: [[porco]] {{m}}, [[maiale]] {{m}}
 {{trans-mid}}
-*Latvian: [[cūka]] {{f}}
-*Russian: [[свинья]] (svin’já) {{f}}, [[свинтус]] (svítus) {{m}}
-*Serbian:
-*:Cyrillic: [[свиња#Serbian|свиња]] {{f}}
-*:Roman: [[svinja#Serbian|svinja]] {{f}}
-*Slovene: [[prašič]] {{m}}
+* Latvian: [[cūka]] {{f}}
+* Russian: [[свинья]] (svin’já) {{f}}, [[свинтус]] (svítus) {{m}}
+* Serbian:
+*: Cyrillic: [[свиња#Serbian|свиња]] {{f}}
+*: Roman: [[svinja#Serbian|svinja]] {{f}}
+* Slovene: [[prašič]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|derogatory slang for police officer}}
-*French: [[flic]] {{m}}, [[keuf]] {{m}} {{italbrac|verlan}}
-*German: [[Bulle]] {{m}}
+* French: [[flic]] {{m}}, [[keuf]] {{m}} {{italbrac|verlan}}
+* German: [[Bulle]] {{m}}
 {{trans-mid}}
-*Spanish: [[milico]] {{m}} {{italbrac|Andes|River Plate region}}
+* Spanish: [[milico]] {{m}} {{italbrac|Andes|River Plate region}}
 {{trans-bottom}}
 
 {{trans-top|difficult problem}}
 {{trans-bottom}}
 
 {{trans-top|cast metal block}}
-*Russian: [[чушка]] (čúška), [[болванка]]  (bolvánka) {f}}
+* Russian: [[чушка]] (čúška), [[болванка]]  (bolvánka) {f}}
 {{trans-bottom}}
 
 {{trans-top|mold for a cast metal block}}
@@ -186,43 +186,43 @@
 
 ====Derived terms====
 {{rel-top|terms derived from the noun "pig"}}
-*[[blind pig]]
-*[[bush pig]]
-*[[dish pig]]
-*[[eat like a pig]]
-*[[flying pig]]
-*[[guinea pig]]
-*[[happy as a pig in shit]]
-*[[if pigs had wings]]
-*[[in a pig's eye]]
-*[[pig bed]]
-*[[piggery]]
-*[[piggish]]
+* [[blind pig]]
+* [[bush pig]]
+* [[dish pig]]
+* [[eat like a pig]]
+* [[flying pig]]
+* [[guinea pig]]
+* [[happy as a pig in shit]]
+* [[if pigs had wings]]
+* [[in a pig's eye]]
+* [[pig bed]]
+* [[piggery]]
+* [[piggish]]
 {{mid3}}
-*[[piggy]]
-*[[piggy bank]]
-*[[piggyback]]
-*[[pigheaded]]
-*[[pig in a blanket]]
-*[[pig in a poke]]
-*[[pig iron]]
-*[[pig it]]
-*[[pig Latin]]
-*[[pig lead]]
-*[[piglet]]
+* [[piggy]]
+* [[piggy bank]]
+* [[piggyback]]
+* [[pigheaded]]
+* [[pig in a blanket]]
+* [[pig in a poke]]
+* [[pig iron]]
+* [[pig it]]
+* [[pig Latin]]
+* [[pig lead]]
+* [[piglet]]
 {{mid3}}
-*[[pig-out]]
-*[[pig out]]
-*[[pigpen]]
-*[[pigskin]]
-*[[pigsty]]
-*[[pigtail]]
-*[[pigweed]]
-*[[potbellied pig]]
-*[[sweat like a pig]]
-*[[when pigs fly]]
-*[[whistle pig]]
-*[[year of the pig]]
+* [[pig-out]]
+* [[pig out]]
+* [[pigpen]]
+* [[pigskin]]
+* [[pigsty]]
+* [[pigtail]]
+* [[pigweed]]
+* [[potbellied pig]]
+* [[sweat like a pig]]
+* [[when pigs fly]]
+* [[whistle pig]]
+* [[year of the pig]]
 {{rel-bottom}}
 
 ===Verb===
@@ -259,8 +259,8 @@ From English ''[[pig#English|pig]]''.
 
 # [[pig#English|pig]]
 
-===Synonyms===
-*[[pwaka]]
+====Synonyms====
+* [[pwaka]]
 
 [[Category:Mammals]]
 [[Category:Torres Strait Creole nouns]]
