"Scots" a separate language? <clarty#4065779>

--- a/en/c/clarty.720310.wikitext
+++ b/en/c/clarty.720310.wikitext
@@ -3,4 +3,7 @@
 ===Adjective===
 {{sco-adj}}
 
-#[[dirty]]
+#[[dirty]], [[messy]], [[sticky]], like [[honey]].
+
+===Usage notes===
+The word is also in common dialectal use in parts of Northern England.
