--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -5,9 +5,9 @@
 From Latin ''[[divisio]]'', noun of process form from perfect passive participle ''[[divisus]]'', divided, from ''[[dividere]]'', to divide
 
 ===Pronunciation===
-*{{IPA|/dɪˈvɪʒən/}}, {{SAMPA|/dI"vIZ@n/}}
-*{{audio|en-us-division.ogg|Audio (US)}}
-*{{rhymes|ɪʒən}}
+* {{IPA|/dɪˈvɪʒən/}}, {{SAMPA|/dI"vIZ@n/}}
+* {{audio|en-us-division.ogg|Audio (US)}}
+* {{rhymes|ɪʒən}}
 
 ===Noun===
 {{en-noun|s|-}}
@@ -16,11 +16,11 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 # Each of the separate parts of something resulting from division.
 # {{arithmetic}} (''uncountable'') The [[process]] of [[divide|dividing]] a number by another.
 # {{arithmetic}} A calculation that involves this process.
-#:''I've got ten divisions to do for my homework.''
+#: ''I've got ten divisions to do for my homework.''
 # A large [[military]] [[unit]], usually made up of two or three [[brigade]]s.
 # A [[section]] of a large [[company]].
 # {{context|biology|taxonomy}} A [[rank]] (Latin ''divisio'') below [[kingdom]] and above [[class]], particularly used of [[plant|plants]] or [[fungus|fungi]], also (particularly of [[animal]]s) called a [[phylum]]; a [[taxon]] at that rank
-#:''Magnolias belong to the '''division''' Magnoliophyta.''
+#: ''Magnolias belong to the '''division''' Magnoliophyta.''
 # A disagreement; a difference of viewpoint between two sides of an argument.
 # {{music}} A florid instrumental variation of a melody in the 17th and 18th centuries, originally conceived as the dividing of each of a succession of long notes into several short ones.
 # {{music}} A set of pipes in a [[pipe organ]] which are independently controlled and supplied.
@@ -28,103 +28,103 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 
 ====Translations====
 {{trans-top|act or process of dividing anything}}
-*[[Afrikaans]]: [[verdeling]]
-*Czech: [[dělení]] {{n}}
-*Dutch: [[deling]] {{f}}; [[verdeling]] {{f}}; [[scheiding]] {{f}}
-*Esperanto: [[divido]]
-*Finnish: [[jakaminen]], [[jako]]
-*French: division {{f}}
-*German: [[Teilung]] {{f}}
-*Hebrew: [[חלוקה]] (khaluqa) {{f}}
-*Italian: [[divisione]] {{f}}
+* [[Afrikaans]]: [[verdeling]]
+* Czech: [[dělení]] {{n}}
+* Dutch: [[deling]] {{f}}; [[verdeling]] {{f}}; [[scheiding]] {{f}}
+* Esperanto: [[divido]]
+* Finnish: [[jakaminen]], [[jako]]
+* French: division {{f}}
+* German: [[Teilung]] {{f}}
+* Hebrew: [[חלוקה]] (khaluqa) {{f}}
+* Italian: [[divisione]] {{f}}
 {{trans-mid}}
-*Kurdish: {{KUchar|[[دابه‌ش]]}}
-*Polish: [[podział]] {{m}}
-*Romanian: [[diviziune]] {{f}}
-*Russian: [[раздел]] (razdél) {{m}}, [[деление]] (delénije) {{n}}
-*Slovene: [[deljenje]] {{n}}
-*Swedish: [[division#Swedish|division]] {{c}}
-*[[Telugu]]: [[విభజన]]
-*Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
+* Kurdish: {{KUchar|[[دابه‌ش]]}}
+* Polish: [[podział]] {{m}}
+* Romanian: [[diviziune]] {{f}}
+* Russian: [[раздел]] (razdél) {{m}}, [[деление]] (delénije) {{n}}
+* Slovene: [[deljenje]] {{n}}
+* Swedish: [[division#Swedish|division]] {{c}}
+* [[Telugu]]: [[విభజన]]
+* Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
 {{trans-bottom}}
 
 {{trans-top|each of the parts resulting from division}}
-*[[Afrikaans]]: [[gedeelte]]
-*Czech: [[díl]] {{m}}
-*Dutch: [[deel]] {{n}}, [[gedeelte]] {{n}}
-*Finnish: [[osa]]
-*German: [[Teil]] {{m}}
+* [[Afrikaans]]: [[gedeelte]]
+* Czech: [[díl]] {{m}}
+* Dutch: [[deel]] {{n}}, [[gedeelte]] {{n}}
+* Finnish: [[osa]]
 {{trans-mid}}
-*Kurdish: {{KUchar|[[به‌ش]]}}
-*[[Malayalam]]: [[വിഭാഗം]] (vibhaagam)
+* German: [[Teil]] {{m}}
+* Kurdish: {{KUchar|[[به‌ش]]}}
+* [[Malayalam]]: [[വിഭാഗം]] (vibhaagam)
 {{trans-bottom}}
 
 {{trans-top|arithmetic: process of dividing a number by another}}
-*[[Afrikaans]]: [[deel]]
-*Czech: [[dělení]] {{n}}
-*Dutch: [[deling]] {{f}}; [[delen]] {{n}}
-*Esperanto: [[divido]]
-*Finnish: [[jako]], [[jakaminen]]
-*French: division {{f}}
-*German: [[Division]] {{f}}
-*Hebrew: [[חילוק]] (khiluq) {{m}}
-*Italian: [[divisione]] {{f}}
+* [[Afrikaans]]: [[deel]]
+* Czech: [[dělení]] {{n}}
+* Dutch: [[deling]] {{f}}; [[delen]] {{n}}
+* Esperanto: [[divido]]
+* Finnish: [[jako]], [[jakaminen]]
+* French: division {{f}}
+* German: [[Division]] {{f}}
+* Hebrew: [[חילוק]] (khiluq) {{m}}
+* Italian: [[divisione]] {{f}}
 {{trans-mid}}
-*Kurdish: {{KUchar|[[دابه‌ش]]}}
-*Polish: [[dzielenie]] {{n}}
-*Romanian: [[impartire]] {{f}}
-*Russian: [[деление]] (delénije) {{n}}
-*Slovene: [[deljenje]] {{n}}
-*Swedish: [[division#Swedish|division]] {{c}}
-*[[Telugu]]: [[భాగహారము]]
-*Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
+* Kurdish: {{KUchar|[[دابه‌ش]]}}
+* Polish: [[dzielenie]] {{n}}
+* Romanian: [[impartire]] {{f}}
+* Russian: [[деление]] (delénije) {{n}}
+* Slovene: [[deljenje]] {{n}}
+* Swedish: [[division#Swedish|division]] {{c}}
+* [[Telugu]]: [[భాగహారము]]
+* Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
 {{trans-bottom}}
 
 {{trans-top|arithmetic: calculation involving this process}}
-*[[Afrikaans]]: [[deel]]
-*Czech: [[dělení]] {{n}}
-*Dutch: [[deling]] {{f}}; [[staartdeling]] {{f}}
-*Finnish: [[jakolasku]]
+* [[Afrikaans]]: [[deel]]
+* Czech: [[dělení]] {{n}}
+* Dutch: [[deling]] {{f}}; [[staartdeling]] {{f}}
+* Finnish: [[jakolasku]]
+* Kurdish: {{KUchar|[[دابه‌ش]]}}
 {{trans-mid}}
-*Kurdish: {{KUchar|[[دابه‌ش]]}}
-*Polish: [[dzielenie]] {{n}}
-*Russian: [[деление]] (delénije) {{n}}
-*Swedish: [[division#Swedish|division]] {{c}}
-*Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
+* Polish: [[dzielenie]] {{n}}
+* Russian: [[деление]] (delénije) {{n}}
+* Swedish: [[division#Swedish|division]] {{c}}
+* Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
 {{trans-bottom}}
 
 {{trans-top|large military unit}}
-*[[Afrikaans]]: [[afdeling]]; [[skeiding]]
-*Dutch: [[divisie]] {{f}},
-*Esperanto: [[divizio]]
-*Finnish: [[divisioona]]
-*German: [[Abteilung]] {{f}}, [[Division]] {{f}}
-*Hebrew: [[אוגדה]] (ugda) {{f}}
+* [[Afrikaans]]: [[afdeling]]; [[skeiding]]
+* Dutch: [[divisie]] {{f}},
+* Esperanto: [[divizio]]
+* Finnish: [[divisioona]]
+* German: [[Abteilung]] {{f}}, [[Division]] {{f}}
+* Hebrew: [[אוגדה]] (ugda) {{f}}
+* Kurdish: {{KUchar|[[فرقه‌]]}}
 {{trans-mid}}
-*Kurdish: {{KUchar|[[فرقه‌]]}}
-*Polish: [[dywizja]] {{f}}
-*Romanian: [[impartire]] {{f}}
-*Russian: [[дивизия]] (divízija) {{f}} ''army'', [[дивизион]] (divizión) {{m}} ''navy''
-*Slovene: [[divizija]] {{f}}
-*Swedish: [[division#Swedish|division]] {{c}}
-*[[Telugu]]: [[విభాగము]]
+* Polish: [[dywizja]] {{f}}
+* Romanian: [[impartire]] {{f}}
+* Russian: [[дивизия]] (divízija) {{f}} ''army'', [[дивизион]] (divizión) {{m}} ''navy''
+* Slovene: [[divizija]] {{f}}
+* Swedish: [[division#Swedish|division]] {{c}}
+* [[Telugu]]: [[విభాగము]]
 {{trans-bottom}}
 
 {{trans-top|section of a large company}}
-*[[Afrikaans]]: [[afdeling]]
-*Dutch: [[afdeling]] {{f}}, [[divisie]] {{f}}, [[eenheid]] {{f}}
-*Kurdish: {{KUchar|[[به‌ش]]}}
+* [[Afrikaans]]: [[afdeling]]
+* Dutch: [[afdeling]] {{f}}, [[divisie]] {{f}}, [[eenheid]] {{f}}
+* Kurdish: {{KUchar|[[به‌ش]]}}
+* Romanian: [[divizie]] {{f}}
 {{trans-mid}}
-*Romanian: [[divizie]] {{f}}
-*Russian: [[отдел]] (otdél) {{m}}, [[отделение]] (otdelénije) {{n}}, [[секция]] (sékcija) {{f}}
-*Swedish: [[division#Swedish|division]] {{c}}
-*[[Telugu]]: [[విభాగము]]
+* Russian: [[отдел]] (otdél) {{m}}, [[отделение]] (otdelénije) {{n}}, [[секция]] (sékcija) {{f}}
+* Swedish: [[division#Swedish|division]] {{c}}
+* [[Telugu]]: [[విభాగము]]
 {{trans-bottom}}
 
 {{trans-top|biology: taxonomic classification of plants}}
-*Finnish: [[kaari]], [[pääjakso]]
+* Finnish: [[kaari]], [[pääjakso]]
 {{trans-mid}}
-*Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
+* Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
 {{trans-bottom}}
 
 {{trans-top|disagreement; a difference of viewpoint}}
@@ -132,32 +132,32 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 {{trans-bottom}}
 
 {{trans-top|law: concept of separate responsibility}}
-*Dutch: [[deelbaarheid]] (van prestasie) {{f}}
+* Dutch: [[deelbaarheid]] (van prestasie) {{f}}
 {{trans-mid}}
 {{trans-bottom}}
 
 =====Translations to be checked=====
 {{checktrans}}
-*{{ttbc|Breton}}: [[rannadur]] {{m}}, -ioú {{p}}
-*{{ttbc|CJKV Characters}}: [[段]]
-*{{ttbc|Estonian}}: [[jagamine]] (1)
-*{{ttbc|Frisian}}: [[dieling]] {{f}}, [[deling]] {{f}}
-*{{ttbc|Spanish}}: [[división]] {{f}}
+* {{ttbc|Breton}}: [[rannadur]] {{m}}, -ioú {{p}}
+* {{ttbc|CJKV Characters}}: [[段]]
+* {{ttbc|Estonian}}: [[jagamine]] (1)
+* {{ttbc|Frisian}}: [[dieling]] {{f}}, [[deling]] {{f}}
+* {{ttbc|Spanish}}: [[división]] {{f}}
 
-===Derived terms===
-*[[divisional]]
+====Derived terms====
+* [[divisional]]
 
-===Related terms===
-*[[divide]]
-*[[dividend]]
-*[[divisive]]
-*[[divisor]]
+====Related terms====
+* [[divide]]
+* [[dividend]]
+* [[divisive]]
+* [[divisor]]
 
 ===See also===
-*[[denominator]]
-*[[fraction]]
-*[[numerator]]
-*[[quotient]]
+* [[denominator]]
+* [[fraction]]
+* [[numerator]]
+* [[quotient]]
 
 [[Category:1000 English basic words]]
 [[Category:Law]]
