--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -13,10 +13,10 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 ===Verb===
 {{en-verb|blows|blowing|'''[[blew]]''' or (''dialect'') '''[[blowed]]'''|'''[[blown]]''' or (''dialect'') '''[[blowed]]'''}}
 
-# {{intransitive}} To produce an [[air current]]
+# {{intransitive}} To produce an [[air]] [[current]]
 #*'''Quotations'''
 #:'''Blow''', winds, and crack your cheeks! rage! '''blow'''! -- ''King Lear''
-# {{intransitive}} To be propelled by an [[air current]].
+# {{intransitive}} To be propelled by an [[air]] [[current]].
 #:''The leaves '''blow''' through the streets in the fall.''
 # {{intransitive}} To [[explode]]
 #:''Get away from that burning gas tank!  It's about to '''blow'''!''
@@ -25,7 +25,7 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 # {{intransitive}} (''of a [[cetacean]]'') To [[exhale]] [[visibly]] through the [[spout]] the [[seawater]] it has taken in while [[feeding]].
 #:''There's nothing more thrilling to the whale watcher than to see a whale surface and '''blow'''.''
 #:''There she '''blows'''! (That is, "I see a whale spouting!")''
-# {{transitive}} To propel by an [[air current]].
+# {{transitive}} To propel by an [[air]] [[current]].
 #:'''''Blow''' the dust off that book and open it up.''
 # {{transitive}} To [[squander]].
 #:''I managed to '''blow''' $1000 at blackjack in under an hour.''
