sorted/rebalanced translations <squirrel#4082018>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -112,6 +112,7 @@ From {{AF.}} ''[[esquirel]]'', from {{OF.}} ''[[escurel]]'' (modern {{F.}} {{ter
 
 {{trans-top|to squirrel around}}
 * Finnish: [[säntäillä]], säntäillä [[ympäri|ympäriinsä]]
+{{trans-mid}}
 {{trans-bottom}}
 
 [[Category:Mammals]]
