--- a/en/m/make a killing.742288.wikitext
+++ b/en/m/make a killing.742288.wikitext
@@ -7,3 +7,9 @@
 {{infl|en|verb|head=to [[make]] [[a]] [[killing]]}}
 
 # {{idiom}} To win or earn a large amount of [[money]].
+
+====Translations====
+{{top}}
+* Finnish: [[tienata]] [[hyvä|hyvät]] [[raha|rahat]]
+{{mid}}
+{{bottom}}
