/* Etymology */ etyl term <minimum#4082253>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-Latin ''[[minim]]'' small + ''[[-um]]''
+From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 
 ===Noun===
 {{en-noun|pl=minima|pl2=minimums}}
