subst {{vi}} in trans <minimum#4082308>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -30,7 +30,7 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 * Russian: [[минимум]] (mínimum) {{m}}
 * Swedish: [[minimum#Swedish|minimum]] {{n}}
 * [[Telugu]]: [[కనిష్టం]] (kanishTaM)
-* {{vi}}: [[tối thiểu]]
+* Vietnamese: [[tối thiểu]]
 {{trans-bottom}}
 
 [[Category:English nouns with irregular plurals]]
