--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -68,13 +68,14 @@
 
 ----
 
+
 ==Slovak==
 
 ===Etymology===
 : '''[[voda#Slovak|voda]]''' (''[[water]]'') + '''[[-ka#Slovak|-ka]]''' (''diminutive suffix''), or ''little water''
 
 ===Noun===
-: '''vodka''' ''f'', '''vodky''' ''pl''
+{{sk-noun|g=f}} '''vodky''' ''pl''
 : '''vodk''' ''stem''
 : '''vodiek''' ''{{genpl}}''
 : {{decpat}} {{zena}}
@@ -84,10 +85,7 @@
 ====Derived terms====
 * [[vodkový]] -á -é
 
-[[Category:Alcoholic beverages]]
-[[Category:Polish derivations]]
-[[Category:Russian derivations]]
-[[Category:Slovak language]]
+[[Category:sk:Alcoholic beverages]]
 
 [[ar:vodka]]
 [[el:vodka]]
