--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -14,18 +14,18 @@ From French ''simple'', from Latin ''[[simplex]]''
 ===Adjective===
 {{en-adj|simpler|simplest}}
 
-# having few parts or features; having no special features
+# Having few parts or features; having no special features.
 #*'''2001''', Sydney I. Landau, ''Dictionaries: The Art and Craft of Lexicography'', Cambridge University Press (ISBN 0-521-78512-X), page 167,
 #*:There is no '''simple''' way to define precisely a complex arrangement  of parts, however homely the object may appear to be.
-# {{colloquial}} feeble-minded.
-
+# {{colloquial}} Feeble-minded.
+#{{math|of a [[group]]}} Having no [[normal]] [[subgroup]].
+#{{math|of a [[Lie group]]}} Having no [[connected]] [[normal]] [[subgroup]].
 ====Synonyms====
-*[[plain]]
+*{{sense|having few parts or features}} [[plain]]
 *See [[WikiSaurus:easy]]
 
 ====Antonyms====
-*[[complex]]
-*[[compound]]
+*{{sense|having few parts or features}} [[complex]], [[compound]]
 
 ====Translations====
 {{trans-top|uncomplicated}}
