header Related terms to L4, script template -ARchar +Arab, sorted/rebalanced translations <simple#4091082>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -6,30 +6,31 @@
 From French ''simple'', from Latin ''[[simplex]]''
 
 ===Pronunciation===
-*{{IPA|/ˈsɪmpl/}}
-*{{audio|en-us-simple.ogg|Audio (US)}}
-*:Rhymes: [[Rhymes:English:-ɪmpəl|-ɪmpəl]]
-*Hyphenation: sim·ple
+* {{IPA|/ˈsɪmpl/}}
+* {{audio|en-us-simple.ogg|Audio (US)}}
+*: Rhymes: [[Rhymes:English:-ɪmpəl|-ɪmpəl]]
+* Hyphenation: sim·ple
 
 ===Adjective===
 {{en-adj|simpler|simplest}}
 
 # Having few parts or features; having no special features.
-#*'''2001''', Sydney I. Landau, ''Dictionaries: The Art and Craft of Lexicography'', Cambridge University Press (ISBN 0-521-78512-X), page 167,
-#*:There is no '''simple''' way to define precisely a complex arrangement  of parts, however homely the object may appear to be.
+#* '''2001''', Sydney I. Landau, ''Dictionaries: The Art and Craft of Lexicography'', Cambridge University Press (ISBN 0-521-78512-X), page 167,
+#*: There is no '''simple''' way to define precisely a complex arrangement  of parts, however homely the object may appear to be.
 # {{colloquial}} Feeble-minded.
-#{{math|of a [[group]]}} Having no [[normal]] [[subgroup]].
-#{{math|of a [[Lie group]]}} Having no [[connected]] [[normal]] [[subgroup]].
+# {{math|of a [[group]]}} Having no [[normal]] [[subgroup]].
+# {{math|of a [[Lie group]]}} Having no [[connected]] [[normal]] [[subgroup]].
+
 ====Synonyms====
-*{{sense|having few parts or features}} [[plain]]
-*See [[WikiSaurus:easy]]
+* {{sense|having few parts or features}} [[plain]]
+* See [[WikiSaurus:easy]]
 
 ====Antonyms====
-*{{sense|having few parts or features}} [[complex]], [[compound]]
+* {{sense|having few parts or features}} [[complex]], [[compound]]
 
 ====Translations====
 {{trans-top|uncomplicated}}
-* Arabic: {{ARchar|[[بسيط]]}} {{IPAchar|(basíeʈ)}}
+* Arabic: {{Arab|[[بسيط]]}} {{IPAchar|(basíeʈ)}}
 * Bulgarian: {{t+|bg|прост|m|tr=prost|sc=Cyrl}}
 * Chinese: {{zh-ts|簡單|简单}} (jiǎndān)
 * Czech: {{t-|cs|jednoduchý|m}}
@@ -40,10 +41,10 @@ From French ''simple'', from Latin ''[[simplex]]''
 * German: {{t+|de|einfach}}, {{t+|de|simpel}}
 * Hungarian: {{t+|hu|egyszerű}}
 * Italian: {{t+|it|semplice}}
-{{trans-mid}}
 * Japanese: [[簡単な]] (kantan na), [[単純な]] (tanjun na)
+{{trans-mid}}
 * Korean: [[간단한]] (gandanhan)
-* Kurdish: 
+* Kurdish:
 *: Sorani: {{t|ku|ئاسان|tr=AsAn|sc=KUchar}}, {{t|ku|ساکار|tr=sAkAr|sc=KUchar}}
 * Latin: {{t+|la|simplex}}
 * [[Novial]]: [[simpli]]
@@ -64,10 +65,10 @@ From French ''simple'', from Latin ''[[simplex]]''
 * Swedish: {{t+|sv|enkel}}
 {{trans-bottom}}
 
-===Related terms===
-*[[simplex]]
-*[[simply]]
-*[[single]]
+====Related terms====
+* [[simplex]]
+* [[simply]]
+* [[single]]
 
 ===Noun===
 {{en-noun}}
@@ -95,8 +96,8 @@ From French ''simple'', from Latin ''[[simplex]]''
 ==French==
 
 ===Pronunciation===
-*{{IPA|/s̃ɛpl/}}
-*[[w:SAMPA|SAMPA]]: /sE~pl/
+* {{IPA|/s̃ɛpl/}}
+* [[w:SAMPA|SAMPA]]: /sE~pl/
 
 ===Adjective===
 {{fr-adj-mf}}
@@ -106,10 +107,10 @@ From French ''simple'', from Latin ''[[simplex]]''
 #: ''Un billet simple.''
 #:: ''A one-way ticket.''
 
-===Related terms===
-*[[simplement]]
-*[[simplicité]]
-*[[simplifier]]
+====Related terms====
+* [[simplement]]
+* [[simplicité]]
+* [[simplifier]]
 
 ----
 
