--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -7,7 +7,7 @@ The earliest record of the phrase ''better late than never'' comes from around 2
 ===Phrase===
 '''[[better]] [[late]] than [[never]]'''
 
-# It's better do do something late, than to never do it at all.
+# It's better to do something late, than to never do it at all.
 #*'''1996.''' Titus Livius (translation). ''Livy's History of Rome'' (in English):
 #*:''Their insolence and recklessness must be opposed, and '''better late than never'''.''
 
