--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -35,6 +35,7 @@
 {{trans-mid}}
 * Hebrew: [[מקל|מַקֵּל]] {{m}}
 * [[Ido]]: [[bastono]]
+* Indonesian: [[toya]]
 * Italian: [[bastone]] {{m}}
 * Spanish: [[bastón]] {{m}}, [[báculo]] {{m}}
 {{trans-bottom}}
