--- a/en/s/second coming.746616.wikitext
+++ b/en/s/second coming.746616.wikitext
@@ -4,3 +4,6 @@
 {{en-noun|-|sg=[[second]] [[coming]]}}
 
 # {{Christianity}} The (awaited) triumphant return of [[Jesus Christ]].
+
+====Translations====
+* Greek: {{t|el|Δευτέρα Παρουσία}}
