--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -27,25 +27,25 @@
 {{trans-bottom}}
 
 {{trans-top|The acts of preparation carried out during this period}}
+* German: {{t+|de|Zeitkontrolle|f}}
 *Portuguese: [[contagem regressiva]], [[retrocontagem]] {{f}}
 {{trans-mid}}
 *Russian: [[обратный отсчёт]] (obrátnyj otš'ót) {{m}}
 {{trans-bottom}}
 
 {{trans-top|A radio or television program counting down the top songs of a given week}}
+*German: {{t-|de|Countdown|m}}
 {{trans-mid}}
 {{trans-bottom}}
 
 {{checktrans-top}}
 *{{ttbc|Dutch}}: [[aftelling]] {{f}}
-*{{ttbc|German}}: [[Zeitkontrolle]] {{f}}
 {{trans-mid}}
 
 ;to count down (nonsense - nonstandard)
 *Chinese:
 *:Mandarin: {{zh-ts|[[倒]][[數]]|[[倒]][[数]]}} ([[dào]][[shǔ]])
 *Dutch: [[aftellen]]
-*German: [[rückwärts]] [[zählen]]
 *Portuguese: [[fazer]] a [[contagem regressiva]]
 *Slovene: [[odštevati]]
 {{trans-bottom}}
