--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -37,6 +37,7 @@
 =====Translations=====
 {{trans-top|grinding apparatus or the building housing it}}
 * Arabic: {{Arab|[[مطحنة]]}}
+* Bosnian: [[mlin]] {{m}}
 * Croatian: [[mlin]] {{m}}
 * Dutch: [[molen]] {{m}}
 * [[Erzya]]: [[ведьгев]] (vedgev)
@@ -55,7 +56,9 @@
 * [[Old High German]]: [[mulin]] {{f}}
 * Polish: [[młyn]] {{m}}
 * Portuguese: [[moenda]] {{f}}, [[moinho]] {{m}}
-* Serbian: [[mlin]] {{m}}, [[mlinac]] {{m}}
+* Serbian:
+*: Cyrillic: [[млин]] {{m}}
+*: Roman: [[mlin]] {{m}}
 * Slovenian: [[mlin]] {{m}}
 * Spanish: [[molino]] {{m}}
 * Turkish: [[değirmen]]
