--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -1,3 +1,19 @@
+
+==Translingual==
+
+===Number===
+'''CD'''
+
+# A Roman numeral representing [[four hundred]] ([[400]]).
+
+====See also====
+* Alternate forms: [[cd]], [[CCCC]], [[cccc]]
+* Previous: [[CCCXCIX]] ([[three hundred and ninety-nine]], [[399]])
+* Next: [[CDI]] ([[four hundred and one]], [[401]])
+
+[[Category:Roman numerals]]
+----
+
 ==English==
 
 ====Homophones====
