--- a/en/j/Jilly.741404.wikitext
+++ b/en/j/Jilly.741404.wikitext
@@ -3,6 +3,4 @@
 ===Proper noun===
 {{en-proper-noun}}
 
-# A [[female]] [[given name]], diminutive of [[Jill]], [[Jillian]] or [[July]].
-
-[[Category:Female given names]]
+# {{given name|female}}, a diminutive of [[Jill]], [[Jillian]] or [[Julia]].
