--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -16,7 +16,7 @@ From {{F.}} ''[[grognard#French|grognard]]'' "[[old]] [[soldier]]".
 ===Noun===
 {{fr-noun|m}}
 
-# A [[grognard#English|grognard]].
+# An old [[soldier]].
 
 [[fr:grognard]]
 [[vi:grognard]]
