/* Etymology */ etyl, term tmplts <grognard#4111822>

--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -1,8 +1,7 @@
 ==English==
 
 ===Etymology===
-
-From {{F.}} ''[[grognard#French|grognard]]'' "[[old]] [[soldier]]".
+From {{etyl|fr|en}} {{term|grognard||lang=fr|old soldier}}
 
 ===Noun===
 {{en-noun}}
