--- a/en/w/whatever it takes.775539.wikitext
+++ b/en/w/whatever it takes.775539.wikitext
@@ -1,18 +1,22 @@
 ==English==
+
 ===Noun===
 {{en-noun|sg=[[whatever]] [[it]] [[takes]]|-}}
+
 # Anything that may be [[required]] to [[achieve]] an [[objective]].
 * We stand ready to do '''whatever it takes'''.
 
 ===Adverb===
 {{en-adv|-}}
-# Strong [[affirmation]] of [[willingness]].
-#* Question: Are you proposing we kidnap the ambassador? 
-#*: Answer: '''Whatever it takes'''. 
 
-==== Translations ====
+# Strong [[affirmation]] of [[willingness]].
+#* Question: Are you proposing we kidnap the ambassador?
+#*: Answer: '''Whatever it takes'''.
+
+====Translations====
 {{trans-top|affirmation of willingness}}
 * Spanish: [[todo lo que sea  necesario]].
+{{trans-mid}}
 {{trans-bottom}}
 
 [[Category:English idioms]]
