/* English */ +{{en-noun|sg=[[ghetto]] [[fence]]}} <ghetto fence#4114827>

--- a/en/g/ghetto fence.803542.wikitext
+++ b/en/g/ghetto fence.803542.wikitext
@@ -1,4 +1,6 @@
 ==English==
+
 ===Noun===
-'''[[ghetto]] [[fence]]'''
-#A [[barrier]] intended to keep one group (usually against their will) separate from another.
+{{en-noun|sg=[[ghetto]] [[fence]]}}
+
+# A [[barrier]] intended to keep one group (usually against their will) separate from another.
