--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -82,7 +82,7 @@
 ==Latin==
 
 ===Etymology===
-{{term|specere|lang=la||to see}} + {{term|-ies|lang=la}} suffix signifying [[abstract]] noun.
+{{term|specere|lang=la||to see}} + {{term|-ies|lang=la}} suffix signifying [[abstract]] noun. BUTT SEX!!! 
 
 ===Pronunciation===
 *{{audio|La-species.OGG|audio}}
