Replacing [[Image:NPV-em.jpg]] with [[Image:Baculovirus.jpg]] (by [[commons:User:Cecil|Cecil]] because: Was in category "Duplicate", exact duplicate). <baculovirus#4119204>

--- a/en/b/baculovirus.775629.wikitext
+++ b/en/b/baculovirus.775629.wikitext
@@ -1,4 +1,4 @@
-[[Image:NPV-em.jpg|thumb|[[occlusion body|Occlusion body]] of a [[baculovirus]], ''[[Nucleopolyhedrovirus]]'' sp.]]
+[[Image:Baculovirus.jpg|thumb|[[occlusion body|Occlusion body]] of a [[baculovirus]], ''[[Nucleopolyhedrovirus]]'' sp.]]
 ==English==
 ===Etymology===
 
