--- a/en/f/furball.746671.wikitext
+++ b/en/f/furball.746671.wikitext
@@ -3,6 +3,6 @@
 ===Noun===
 {{en-noun}}
 
-#A [[ball]] of [[fur]], particularly one [[cough]]ed up by a [[cat]].
+#A [[ball]] of [[fur]], especially one [[cough]]ed up by a [[cat]].
 #{{informal}} A particularly [[furry]] person or animal.
-#A large aerial battle consisting of many fighter aircraft.
+#{{military|slang}} A large [[aerial]] [[battle]] consisting of many fighter aircraft.
