--- a/en/e/EPROM.26249.wikitext
+++ b/en/e/EPROM.26249.wikitext
@@ -1,5 +1,10 @@
 ==English==
 ==={{acronym}}===
-'''EPROM'''
+{en-noun}}
+# {{electronics}} Erasable Programmable [[read-only|Read Only]] Memory
 
-#Erasable Programmable [[read-only|Read Only]] Memory
+====Related terms====
+* [[EEPROM]]
+* [[PROM]]
+* [[ROM]]
+* [[flash memory]]
