--- a/en/e/EPROM.26249.wikitext
+++ b/en/e/EPROM.26249.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ==={{acronym}}===
-{en-noun}}
+{{en-noun}}
 # {{electronics}} Erasable Programmable [[read-only|Read Only]] Memory
 
 ====Related terms====
