--- a/en/t/termbase.801754.wikitext
+++ b/en/t/termbase.801754.wikitext
@@ -7,3 +7,7 @@
 {{en-noun}}
 
 # {{translation|software}} A [[database]] of [[terminology]], usually in a [[multilingual]] format.
+
+
+===External links===
+[http://www.termbases.eu/ Online termbase software]
