script template -ARchar +Arab, sorted/rebalanced translations <whistle#4228706>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -4,15 +4,15 @@
 {{ME.}} {{term|whistlen|lang=enm}}; {{OE.}} {{term|hwistlan|lang=ang}}.
 
 ===Pronunciation===
-*{{audio|en-us-whistle.ogg|Audio (US)}}
-*:{{rhymes|ɪsəl}}
+* {{audio|en-us-whistle.ogg|Audio (US)}}
+*: {{rhymes|ɪsəl}}
 
 ===Verb===
 {{en-verb|whistl|ing}}
 
 # To make a shrill, high-pitched sound by forcing air through the mouth. To produce a whistling sound, restrictions to the flow of air are created using the teeth, tongue and lips.
 # To move in such a way as to create a whistling sound.
-#:''A bullet '''whistled''' past.''
+#: ''A bullet '''whistled''' past.''
 
 ====Translations====
 {{trans-top|to produce a whistling sound}}
@@ -21,8 +21,8 @@
 * Danish: {{t-|da|fløjte}}, {{t|da|hvisle}}
 * Dutch: {{t+|nl|fluiten}}
 * Finnish: {{t-|fi|viheltää}}
-* Hungarian: {{t+|hu|fütyül}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|fütyül}}
 * Russian: {{t|ru|свистеть|tr=svist'ét’|sc=Cyrl}} {{impf}}, {{t|ru|свистнуть|tr=svístnut’|sc=Cyrl}} {{pf}}
 * Serbian: {{t|sr|zvižduk|m}}
 * Swedish: {{t+|sv|vissla|c}}
@@ -41,16 +41,16 @@
 {{trans-bottom}}
 
 {{checktrans-top}}
-*{{ttbc|Catalan}}: [[xiular]]
-*{{ttbc|Croatian}}: [[zviždati]]
-*{{ttbc|Esperanto}}: [[fajfi]]
-*{{ttbc|French}}: [[siffler]]
-*{{ttbc|Indonesian}}: [[siul|bersiul]]
+* {{ttbc|Catalan}}: [[xiular]]
+* {{ttbc|Croatian}}: [[zviždati]]
+* {{ttbc|Esperanto}}: [[fajfi]]
+* {{ttbc|French}}: [[siffler]]
+* {{ttbc|Indonesian}}: [[siul|bersiul]]
 {{checktrans-mid}}
-*{{ttbc|Polish}}: [[gwizdać]], [[świstać]]
-*{{ttbc|Portuguese}}: [[apitar]], [[assobiar]]
-*{{ttbc|Spanish}}: [[chiflar]], [[silbar]]
-*{{ttbc|Telugu}}: [[ఈల వేయు]] (eela vEyu), [[బూర ఊదు]] (boora oodu)
+* {{ttbc|Polish}}: [[gwizdać]], [[świstać]]
+* {{ttbc|Portuguese}}: [[apitar]], [[assobiar]]
+* {{ttbc|Spanish}}: [[chiflar]], [[silbar]]
+* {{ttbc|Telugu}}: [[ఈల వేయు]] (eela vEyu), [[బూర ఊదు]] (boora oodu)
 {{checktrans-bottom}}
 
 ===Noun===
@@ -62,8 +62,8 @@
 # {{CockneyRS}} A [[suit]].
 
 ====Derived terms====
-*[[clean as a whistle‎]]
-*[[bells and whistles]]
+* [[clean as a whistle‎]]
+* [[bells and whistles]]
 
 ====Translations====
 {{trans-top|device used to make a whistling sound}}
@@ -103,8 +103,8 @@
 * Danish: [[fløjt]] {{n}}
 * Dutch: [[fluittoon]] {{m}}
 * Finnish: {{t-|fi|vihellys}}
-* Hungarian: [[sípszó]]
 {{trans-mid}}
+* Hungarian: [[sípszó]]
 * Polish: [[gwizd]] {{m}}
 * Portuguese: [[apito]] {{m}}, [[assobio]] {{m}}
 * Russian: {{t|ru|свист|m|tr=svist|sc=Cyrl}}
@@ -115,19 +115,19 @@
 {{trans-bottom}}
 
 {{checktrans-top}}
-*{{ttbc|Arabic}}: {{ARchar|[[صفارة]]}} {{unicode|(ʂufára)}} {{f}}
-*{{ttbc|Catalan}}: [[xiulet]] {{m}}
-*{{ttbc|Chinese}}: [[口哨]] (kǒushào)
-*{{ttbc|French}}: [[sifflet]] {{m}}
-*{{ttbc|German}}: [[Pfeife]] {{f}}
-*{{ttbc|Indonesian}}: [[peluit]]
-*{{ttbc|Irish}}: [[feadog]]
+* {{ttbc|Arabic}}: {{Arab|[[صفارة]]}} {{unicode|(ʂufára)}} {{f}}
+* {{ttbc|Catalan}}: [[xiulet]] {{m}}
+* {{ttbc|Chinese}}: [[口哨]] (kǒushào)
+* {{ttbc|French}}: [[sifflet]] {{m}}
+* {{ttbc|German}}: [[Pfeife]] {{f}}
+* {{ttbc|Indonesian}}: [[peluit]]
+* {{ttbc|Irish}}: [[feadog]]
 {{checktrans-mid}}
-*{{ttbc|Italian}}: [[fischietto]], [[fischio]]
-*{{ttbc|Korean}}: [[호르라기]] (horeuragi)
-*{{ttbc|Spanish}}: [[silbato]] {{m}}
-*{{ttbc|Swahili}}: [[kipenga]]
-*{{ttbc|Telugu}}: [[ఈల]] (eela), [[బూర]] (boora)
+* {{ttbc|Italian}}: [[fischietto]], [[fischio]]
+* {{ttbc|Korean}}: [[호르라기]] (horeuragi)
+* {{ttbc|Spanish}}: [[silbato]] {{m}}
+* {{ttbc|Swahili}}: [[kipenga]]
+* {{ttbc|Telugu}}: [[ఈల]] (eela), [[బూర]] (boora)
 {{checktrans-bottom}}
 
 [[Category:1000 English basic words]]
