/* Translations */ Expanded Aramaic. <island#4297369>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -40,7 +40,9 @@
 * Albanian: {{t-|sq|ishull|m|xs=Albanian}}, {{t-|sq|ujdhesë|f|xs=Albanian}}
 * Arabic: {{Arab|[[جزيرة|جَزِيرَة]]}} (jazeera) {{f}}
 * Aragonese: [[isla]] {{f}}
-* Aramaic: [[ܓܙܪܬܐ]]
+* Aramaic:
+*: Syriac: [[ܓܙܪܬܐ]] (gāzartā’) {{f}}
+*: Hebrew: [[גזרתא]] (gāzartā’) {{f}}
 * Armenian: {{t-|hy|կղզի|tr=kġzi|sc=Hayeren|xs=Armenian}}
 * Asturian: {{t+|ast|islla|f|xs=Asturian}}
 * Azerbaijani: {{fa-Arab|[[آدا]]}}
