Added US pronunciations <sir#4298131>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -5,6 +5,7 @@
 Via {{AF.}} from {{L.}} ''[[senior]]'', '''older''' or '''elder''', from ''[[senex]]'', '''old'''
 
 ===Pronunciation===
+*{{a|US}} {{enPR|sûr}}, {{IPA|/sɝ/}}, {{SAMPA|/s3`/}}
 * {{audio|en-us-sir.ogg|Audio (US)}}
 *: {{rhymes|ɜː(r)}}
 
