--- a/en/k/kluit.4474.wikitext
+++ b/en/k/kluit.4474.wikitext
@@ -1,7 +1,7 @@
 ==Dutch==
 
 ===Noun===
-'''kluit'''
+{{infl|nl|noun}}
 
 # [[lump]], [[clod]] (mostly in connection to [[earth]] or [[soil]])
 #:'''Expressions / Idioms'''
