--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -21,7 +21,7 @@ From {{L.}} [[#Latin|mania]], from {{Gr.}} [[μανία]] (''mania'') "madness".
 # Excessive or unreasonable desire; insane passion affecting one or many people; fanaticism
 <!-- Modified Webster 1913 defs -->
 
-===Translation===
+===Translations===
 {{top}}
 *Greek: [[μανία]] (mania) {{f}}
 {{mid}}
