--- a/en/s/Schweinhundt.856107.wikitext
+++ b/en/s/Schweinhundt.856107.wikitext
@@ -3,6 +3,5 @@
 ===Noun===
 {{infl|de|noun}}
 
-# {{slang|pejorative|lang=de}} [[pig]]-[[dog]]
-
-{{rfv|not German}}
+# {{archaic|slang|pejorative|lang=de}} [[pig]]-[[dog]]
+#*archaic spelling, and no usage in modern German.
