--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -1,7 +1,7 @@
 ==Ancient Greek==
 
 ===Etymology===
-From [[Indoeuropean|IE]] ''kwon-'', cognate with [[hound]], Latin [[canis]], German [[Hund]].
+From {{proto|Indo-European|ḱwṓ}}, cognate with [[hound]], Latin [[canis]], German [[Hund]].
 
 ===Pronunciation===
 {{grc-ipa-rows|kj|u'|oo|n}}
