script template -ARchar +Arab, script template -FAchar +fa-Arab, script template -THchar +Thai, sorted/rebalanced translations <at#4494355>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -8,9 +8,9 @@
 {{ME.}} < {{OE.}} {{term|æt|sc=unicode|lang=ang}} < {{proto|Germanic|at||az}} < {{proto|Indo-European|ad-|to, near, at}}.
 
 ===Pronunciation===
-*{{enPR|ăt}}, {{IPA|/æt/, reduced form /ət/}}, {{SAMPA|/{t/}}, reduced form <tt title="SAMPA pronunciation">/@t/</tt>
-*{{audio|en-us-at.ogg|Audio (US)}}
-*:{{rhymes|æt}}
+* {{enPR|ăt}}, {{IPA|/æt/, reduced form /ət/}}, {{SAMPA|/{t/}}, reduced form <tt title="SAMPA pronunciation">/@t/</tt>
+* {{audio|en-us-at.ogg|Audio (US)}}
+*: {{rhymes|æt}}
 
 ===Preposition===
 {{en-prep}}
@@ -34,123 +34,123 @@
 
 ====Translations====
 {{trans-top|in or very near a particular place}}
-*Arabic: {{Arab|[[عند]]}} ({{unicode|[[ʕand]]}})
-*[[Breton]]: [[e#Breton|e]]
-*Bulgarian: [[в#Bulgarian|в]] (v), [[на#Bulgarian|на]] (na), [[при#Bulgarian|при]] (pri), [[до#Bulgarian|до]] (do)
-*[[Catalan]]: [[a]]
-*Chinese: [[在]] (zài)
-*Czech: [[u#Czech|u]]
-*Danish: [[på]]
-*Dutch: [[op]], [[bij]]
-*Esperanto: [[sur#Esperanto|sur]]
-*[[Faeroese]]: [[í]] / [[á]] / [[hjá]] / [[til]]
-*Finnish: [[-lla]] / [[-llä]] ''([[adessive case]])''; <br> [[-ssa]] / [[-ssä]] ''([[inessive case]])''
-*French: [[à]], [[en#French|en]]
-*German: [[an#German|an]], [[auf]], [[bei]], [[in#German|in]]
-*Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) {{m|p}}, [[στις]] (stis) {{f|p}}, [[στα]] (sta) {{n|p}}
-*Hungarian: [[-n]] / [[-on]] / [[-en]] / [[-ön]] ''([[superessive case]])''; [[-nál]] / [[-nél]] ''([[adessive case]])''
-*[[Ido]]: [[ye]]
-*[[Interlingua]]: [[a#Interlingua|a]], [[in#Interlingua|in]]
-*Irish: [[ag#Irish|ag]]
-*Italian: [[a#Italian|a]], [[in#Italian|in]]
-*Japanese: [[で]] (de), [[に]] (ni)
-*Korean: [[~에서]] (~eseo)
-*Kurdish: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
-*Latin: ''[[locative case]]''
+* Arabic: {{Arab|[[عند]]}} ({{unicode|[[ʕand]]}})
+* [[Breton]]: [[e#Breton|e]]
+* Bulgarian: [[в#Bulgarian|в]] (v), [[на#Bulgarian|на]] (na), [[при#Bulgarian|при]] (pri), [[до#Bulgarian|до]] (do)
+* [[Catalan]]: [[a]]
+* Chinese: [[在]] (zài)
+* Czech: [[u#Czech|u]]
+* Danish: [[på]]
+* Dutch: [[op]], [[bij]]
+* Esperanto: [[sur#Esperanto|sur]]
+* [[Faeroese]]: [[í]] / [[á]] / [[hjá]] / [[til]]
+* Finnish: [[-lla]] / [[-llä]] ''([[adessive case]])''; <br> [[-ssa]] / [[-ssä]] ''([[inessive case]])''
+* French: [[à]], [[en#French|en]]
+* German: [[an#German|an]], [[auf]], [[bei]], [[in#German|in]]
+* Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) {{m|p}}, [[στις]] (stis) {{f|p}}, [[στα]] (sta) {{n|p}}
+* Hungarian: [[-n]] / [[-on]] / [[-en]] / [[-ön]] ''([[superessive case]])''; [[-nál]] / [[-nél]] ''([[adessive case]])''
+* [[Ido]]: [[ye]]
+* [[Interlingua]]: [[a#Interlingua|a]], [[in#Interlingua|in]]
+* Irish: [[ag#Irish|ag]]
+* Italian: [[a#Italian|a]], [[in#Italian|in]]
+* Japanese: [[で]] (de), [[に]] (ni)
+* Korean: [[~에서]] (~eseo)
 {{trans-mid}}
-*[[Novial]]: [[che]], [[an]], [[sur]]
-*Norwegian: [[på]]
-*Persian: {{FAchar|[[در|دَر]]}} (dær)
-*Polish: [[u]], [[przy]]
-*Portuguese: [[a#Portuguese|a]], [[em]]
-*Romanian: [[la]]
-*Russian: [[в#Russian|в]] (v), [[на]] (na), [[при]] (pri), [[у#Russian|у]] (u), [[возле]] (vózle)
-*Slovak: [[v#Slovak|v]]; [[pri#Slovak|pri]]; [[na#Slovak|na]]
-*:''At home'' = doma
-*:''At work'' = v práci
-*:''At the table'' = pri stole
-*:''At the top'' = na vrchu
-*Slovene: [[pri]], [[na]], [[ob]]
-*Spanish: [[en#Spanish|en]]
-*Swedish: [[på]], [[vid]]
-*:''At home'' = hemma
-*:''At work'' = på jobbet
-*:''At the table'' = vid bordet
-*[[Telugu]]: [[వద్ద]] (vadda)
-*Thai: {{THchar|[[ณ]]}} (nā)
-*Turkish: [[-da]], [[-de]]
-*Vietnamese: [[ở tại]], [[lúc]], [[vào]], [[ở]]
+* Kurdish: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
+* Latin: ''[[locative case]]''
+* Norwegian: [[på]]
+* [[Novial]]: [[che]], [[an]], [[sur]]
+* Persian: {{fa-Arab|[[در|دَر]]}} (dær)
+* Polish: [[u]], [[przy]]
+* Portuguese: [[a#Portuguese|a]], [[em]]
+* Romanian: [[la]]
+* Russian: [[в#Russian|в]] (v), [[на]] (na), [[при]] (pri), [[у#Russian|у]] (u), [[возле]] (vózle)
+* Slovak: [[v#Slovak|v]]; [[pri#Slovak|pri]]; [[na#Slovak|na]]
+*: ''At home'' = doma
+*: ''At work'' = v práci
+*: ''At the table'' = pri stole
+*: ''At the top'' = na vrchu
+* Slovene: [[pri]], [[na]], [[ob]]
+* Spanish: [[en#Spanish|en]]
+* Swedish: [[på]], [[vid]]
+*: ''At home'' = hemma
+*: ''At work'' = på jobbet
+*: ''At the table'' = vid bordet
+* [[Telugu]]: [[వద్ద]] (vadda)
+* Thai: {{Thai|[[ณ]]}} (nā)
+* Turkish: [[-da]], [[-de]]
+* Vietnamese: [[ở tại]], [[lúc]], [[vào]], [[ở]]
 {{trans-bottom}}
 
 {{trans-top|indicating time}}
-*Albanian: [[në]]
-*Arabic: {{ARchar|[[في]]}} (fi)
-*[[Breton]]: [[da#Breton|da]]
-*Bulgarian: [[в#Bulgarian|в]] (v)
-*[[Catalan]]: [[a]]
-*Czech: [[v#Czech|v]]
-*Danish: [[på]]
-*Dutch: [[om]]
-*Esperanto: [[je#Esperanto|je]]
-*Finnish: [[-lta]] / [[-ltä]] ''([[ablative case]])''; <br> [[-na]] / [[-nä]] ''([[essive case]])''
-*French: [[à]]
-*German: [[um]]
-*Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) {{m|p}}, [[στις]] (stis) {{f|p}}, [[στα]] (sta) {{n|p}}
-*Hungarian: [[-kor]] ''([[temporalis case]])''
-*[[Interlingua]]: [[a#Interlingua|a]]
+* Albanian: [[në]]
+* Arabic: {{Arab|[[في]]}} (fi)
+* [[Breton]]: [[da#Breton|da]]
+* Bulgarian: [[в#Bulgarian|в]] (v)
+* [[Catalan]]: [[a]]
+* Czech: [[v#Czech|v]]
+* Danish: [[på]]
+* Dutch: [[om]]
+* Esperanto: [[je#Esperanto|je]]
+* Finnish: [[-lta]] / [[-ltä]] ''([[ablative case]])''; <br> [[-na]] / [[-nä]] ''([[essive case]])''
+* French: [[à]]
+* German: [[um]]
+* Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) {{m|p}}, [[στις]] (stis) {{f|p}}, [[στα]] (sta) {{n|p}}
+* Hungarian: [[-kor]] ''([[temporalis case]])''
+* [[Interlingua]]: [[a#Interlingua|a]]
+* Italian: [[a#Italian|a]]
 {{trans-mid}}
-*Italian: [[a#Italian|a]]
-*Japanese: [[に]] (ni)
-*Korean: [[~에]] (~e)
-*Kurdish: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
-*Latin: ''[[ablative]] case''
-*Maltese: [[fi]]
-*[[Novial]]: [[ye]]
-*Polish: [[o]], [[w#Polish|w]]
-*Portuguese: [[a#Portuguese|a]]
-*Romanian: [[la]]
-*Russian: [[в#Russian|в]] (v)
-*Slovak: [[o#Slovak|o]]
-*Slovene: [[ob]]
-*Spanish: [[a#Spanish|a]]
-*Swedish: [[vid]]
-*:''At five o’clock'' = klockan fem ''or'' vid fem (''informal'')
-*:''At midnight'' = vid midnatt
+* Japanese: [[に]] (ni)
+* Korean: [[~에]] (~e)
+* Kurdish: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
+* Latin: ''[[ablative]] case''
+* Maltese: [[fi]]
+* [[Novial]]: [[ye]]
+* Polish: [[o]], [[w#Polish|w]]
+* Portuguese: [[a#Portuguese|a]]
+* Romanian: [[la]]
+* Russian: [[в#Russian|в]] (v)
+* Slovak: [[o#Slovak|o]]
+* Slovene: [[ob]]
+* Spanish: [[a#Spanish|a]]
+* Swedish: [[vid]]
+*: ''At five o’clock'' = klockan fem ''or'' vid fem (''informal'')
+*: ''At midnight'' = vid midnatt
 {{trans-bottom}}
 
 {{trans-top|in the direction of}}
-*Arabic: {{ARchar|[[في]]}} (fi)
-*Bulgarian: [[в#Bulgarian|в]] (v), [[на#Bulgarian|на]] (na)
-*Chinese: [[在]] (zài)
-*Czech: [[na#Czech|na]], [[do#Czech|do]]
-*Danish: [[til]]
-*Dutch: [[op]]
-*Esperanto: [[al#Esperanto|al]]
-*[[Faeroese]]: [[eftir]] ''([[dative case]])''
-*Finnish: [[-lle]] ''([[allative case]])''; [[kohti]]
-*French: [[à]]
-*German: [[nach]], [[zu]]
-*Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) {{m|p}}, [[στις]] (stis) {{f|p}}, [[στα]] (sta) {{n|p}}
-*Hungarian: [[-t]] (''[[accusative case]]'')
-*[[Interlingua]]: [[a#Interlingua|a]]
-*Irish: [[ag#Irish|ag]]
-*Italian: [[a#Italian|a]]
+* Arabic: {{Arab|[[في]]}} (fi)
+* Bulgarian: [[в#Bulgarian|в]] (v), [[на#Bulgarian|на]] (na)
+* Chinese: [[在]] (zài)
+* Czech: [[na#Czech|na]], [[do#Czech|do]]
+* Danish: [[til]]
+* Dutch: [[op]]
+* Esperanto: [[al#Esperanto|al]]
+* [[Faeroese]]: [[eftir]] ''([[dative case]])''
+* Finnish: [[-lle]] ''([[allative case]])''; [[kohti]]
+* French: [[à]]
+* German: [[nach]], [[zu]]
+* Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) {{m|p}}, [[στις]] (stis) {{f|p}}, [[στα]] (sta) {{n|p}}
+* Hungarian: [[-t]] (''[[accusative case]]'')
+* [[Interlingua]]: [[a#Interlingua|a]]
+* Irish: [[ag#Irish|ag]]
 {{trans-mid}}
-*Japanese: [[に]] (ni), [[を]] (o)
-*Korean: [[~에게]] (-ege)
-*Kurdish: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
-*[[Novial]]: [[vers]], [[a]]
-*Norwegian: [[på]]
-*Polish: [[na#Polish|na]], [[do#Polish|do]]
-*Portuguese: [[a#Portuguese|a]]
-*Romanian: [[înspre]]
-*Russian: [[в#Russian|в]] (v), [[на]] (na)
-*Slovak: [[do#Slovak|do]]
-*Spanish: [[a#Spanish|a]]
-*Swedish: [[på]], [[mot#Swedish|mot]]
-*:Han kastade sten mot mig = ''He threw stones at (=towards) me''
-*:Han kastade sten på mig = ''He threw stones at me'' (''...and hit me'')
-*Thai: {{THchar|[[ณ]]}} (nā)
+* Italian: [[a#Italian|a]]
+* Japanese: [[に]] (ni), [[を]] (o)
+* Korean: [[~에게]] (-ege)
+* Kurdish: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
+* Norwegian: [[på]]
+* [[Novial]]: [[vers]], [[a]]
+* Polish: [[na#Polish|na]], [[do#Polish|do]]
+* Portuguese: [[a#Portuguese|a]]
+* Romanian: [[înspre]]
+* Russian: [[в#Russian|в]] (v), [[на]] (na)
+* Slovak: [[do#Slovak|do]]
+* Spanish: [[a#Spanish|a]]
+* Swedish: [[på]], [[mot#Swedish|mot]]
+*: Han kastade sten mot mig = ''He threw stones at (=towards) me''
+*: Han kastade sten på mig = ''He threw stones at me'' (''...and hit me'')
+* Thai: {{Thai|[[ณ]]}} (nā)
 {{trans-bottom}}
 
 ===Noun===
@@ -175,7 +175,7 @@
 '''at'''
 
 # A particle used to mark the following verb as an [[infinitive]].
-#:''Det er menneskeligt '''at''' fejle.'' (''To err is human.'')
+#: ''Det er menneskeligt '''at''' fejle.'' (''To err is human.'')
 
 [[Category:Danish conjunctions]]
 [[Category:Danish particles]]
@@ -238,7 +238,7 @@
 # [[but]]
 
 ====Derived terms====
-*[[atque]]
+* [[atque]]
 
 [[Category:Latin conjunctions]]
 
@@ -273,7 +273,7 @@ From {{E.|tcs}} ''[[heart]]''.
 ==Turkish==
 
 ===Pronunciation===
-*{{audio|Tur-at.ogg|audio}}
+* {{audio|Tur-at.ogg|audio}}
 
 ===Noun===
 '''at''' (''objective definite'' '''[[atı]]''')
@@ -290,7 +290,7 @@ From {{E.|tcs}} ''[[heart]]''.
 ===Etymology 1===
 
 ====Pronunciation====
-*{{IPA|/at/}}
+* {{IPA|/at/}}
 
 ====Noun====
 '''at'''
@@ -300,7 +300,7 @@ From {{E.|tcs}} ''[[heart]]''.
 ===Etymology 2===
 
 ====Pronunciation====
-*{{IPA|/aːt/}}
+* {{IPA|/aːt/}}
 
 ====Noun====
 '''at'''
