--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -146,6 +146,7 @@ From French ''simple'', from Latin ''[[simplex]]''
 # [[simpleton]], [[fool]]
 # ''(pharmacology, masculine)'' [[simple#English|simple]]
 
+[[an:simple]]
 [[ang:simple]]
 [[ar:simple]]
 [[et:simple]]
