Conform to new categories <marten#4507568>

--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -49,7 +49,7 @@
 * Faroese: [[márur]]
 * Finnish: {{t+|fi|näätä}}
 * French: {{t-|fr|marte|f}}, {{t+|fr|martre|f}}
-* [[Frisian]]: [[marter]]
+* [[West Frisian]]: [[marter]]
 * [[Friulian]]: [[mardar]], [[martar]]
 * [[Galician]]: [[marta]]
 * German: {{t+|de|Marder|m}}
