Conform to new categories <ermine#4507571>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -36,7 +36,7 @@
 * Faroese: [[roysikøttur]]
 * Finnish: [[kärppä]]
 * French: [[hermine]] {{f}}
-* [[Frisian]]: [[harmeling]]
+* [[West Frisian]]: [[harmeling]]
 * [[Friulian]]: [[armelin]]
 * [[Galician]]: [[armiño]]
 * German: [[Hermelin]] {{n}}
